Add information in the FAQ re: data security

--- a/src/content/docs/de/faq.mdx
+++ b/src/content/docs/de/faq.mdx
@@ -6,24 +6,24 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Hier finden Sie Antworten auf einige häufig gestellte Fragen zu Scribe for Meetings. Wenn Sie mit einem Problem konfrontiert werden, beziehen Sie sich bitte wann immer möglich auf dieses Dokument.  
-Sie sehen Ihre Frage nicht? [Kontaktieren Sie uns](https://pneumasolutions.com/contact/), und wir klären alles Weitere mit Ihnen.
+Sie sehen Ihre Frage nicht? [Kontaktieren Sie uns](https://pneumasolutions.com/contact/), und wir helfen Ihnen weiter.
 
 ### Was ist Scribe for Meetings?
 
-Scribe for Meetings ist eine Cloud-basierte Technologie, die eine gemeinsame Präsentation auf Plattformen wie Zoom, Microsoft Teams, Google Meet und anderen in eine barrierefreie Präsentation in Echtzeit für druckgeschädigte Personen umwandelt.
+Scribe for Meetings ist eine Cloud-basierte Technologie, die eine gemeinsam genutzte Präsentation auf Plattformen wie Zoom, Microsoft Teams, Google Meet und anderen in eine barrierefreie Präsentation in Echtzeit für druckgeschädigte Personen umwandelt.
 
 ### Wer profitiert von Scribe for Meetings?
 
-Zunächst und vor allem die Millionen von Druckbehinderten, die sonst nicht von den präsentierten Informationen profitieren würden, sowie die Masse der großen und kleinen Unternehmen, Behörden, Bildungseinrichtungen und Organisationen, die wenig über Barrierefreiheit wissen, aber gerne ein erschwingliches Mittel hätten, um ihre Inhalte inklusiver zu gestalten.
+Zunächst und vor allem die Millionen von Menschen mit einer Druckbehinderung, die sonst nicht von den präsentierten Informationen profitieren würden, sowie die vielen großen und kleinen Unternehmen, Behörden, Bildungseinrichtungen und Organisationen, die wenig über Barrierefreiheit wissen, aber gerne eine erschwingliche Möglichkeit hätten, ihre Inhalte inklusiver zu gestalten.
 
 ### Warum sollte ich Scribe for Meetings anderen Produkten vorziehen?
 
-Wir sind davon überzeugt, dass es kein anderes Produkt gibt, das das, was wir tun, auf die gleiche Weise tut wie wir. Scribe for Meetings ist die erste Technologie ihrer Art, die sich in Echtzeit mit Meeting-Plattformen synchronisiert. Sicherlich werden die Wettbewerber dies zur Kenntnis nehmen und wahrscheinlich ihre Nachahmungen auf den Markt bringen, und wir freuen uns auf den Wettbewerb, aber wenn sie nicht vorhaben, über den Preis zu konkurrieren, sind wir zuversichtlich, dass Sie hier finden, was Sie brauchen.
+Wir sind davon überzeugt, dass es kein anderes Produkt gibt, das das, was wir tun, auf die gleiche Weise tut wie wir. Scribe for Meetings ist die erste Technologie ihrer Art, die sich in Echtzeit mit Meeting-Plattformen synchronisiert. Sicherlich werden die Wettbewerber dies zur Kenntnis nehmen und wahrscheinlich ihre Nachahmungen auf den Markt bringen, und wir freuen uns auf den Wettbewerb, aber solange sie nicht vorhaben, über den Preis zu konkurrieren, sind wir zuversichtlich, dass Sie genau das finden werden, was Sie brauchen.
 
 ### Wie funktioniert Scribe for Meetings?
 
 Wenn Sie der Gastgeber sind:
-1. Besuchen Sie [ScribeForMeetings.com,](https://scribeformeetings.com) fügen Sie den Einladungslink für Ihr Meeting ein und drücken Sie "Go".
+1. Besuchen Sie [ScribeForMeetings.com,](https://scribeformeetings.com) fügen Sie den Einladungslink für Ihr Meeting ein und drücken Sie auf "Go".
 1. Klicken Sie auf die Schaltfläche, um Ihr Meeting zu registrieren.
 1. Wenn Sie dazu aufgefordert werden, geben Sie Ihre E-Mail-Adresse ein, um sich anzumelden. Wenn Sie Scribe for Meetings im Namen einer Organisation verwenden, stellen Sie sicher, dass Sie die von dieser Organisation bereitgestellte E-Mail-Adresse verwenden. Wenn Ihre Organisation Scribe for Meetings in ein Single-Sign-On (SSO)-System integriert hat, werden Sie zum normalen Anmeldeprozess für Ihre Organisation weitergeleitet oder möglicherweise automatisch eingeloggt. Andernfalls senden wir Ihnen eine E-Mail mit einem Link, über den Sie sich bei Scribe for Meetings anmelden können.
 1. Geben Sie einen Namen für Ihr Meeting ein, wählen Sie Ihr PowerPoint-Diapaket aus und klicken Sie auf "Absenden".
@@ -34,14 +34,14 @@ Für druckgeschädigte Meeting-Teilnehmer navigieren Sie zu https://www.ScribeFo
 
 ### Wie schwierig ist es, Scribe for Meetings zu installieren?
 
-Scribe for Meetings ist keine installierte Anwendung. Es handelt sich um einen Cloud-Service, d. h. Sie benötigen lediglich einen Browser, um an einem Meeting teilzunehmen. Für Moderatoren ist der Prozess, abgesehen vom Hochladen ihrer Inhalte vor dem Meeting, bewusst einfach gehalten. Auf Ihrem Computer oder Gerät muss nichts anderes als Zoom, Microsoft Teams oder ähnliche Meeting-Plattformen installiert werden.
+Scribe for Meetings ist keine installierte Anwendung. Es handelt sich um einen Cloud-Service, d.h. es wird lediglich ein Browser benötigt, um ein Meeting zu verfolgen. Für Moderatoren ist der Prozess, abgesehen vom Hochladen ihrer Inhalte vor dem Meeting, bewusst einfach gehalten. Auf Ihrem Computer oder Gerät muss nichts anderes als Zoom, Microsoft Teams oder ähnliche Meeting-Plattformen installiert werden.
 Unternehmenskunden können Scribe for Meetings auf ihren eigenen Servern hosten. Bitte setzen Sie sich mit uns in Verbindung, um Details zu erfahren.
 
-### Ich sehe einen Teilnehmer mit dem Namen "Scribe for Meetings", der versucht, meinem Meeting beizutreten. Was ist hier los?
+### Ich sehe einen Teilnehmer namens "Scribe for Meetings", der versucht, meinem Meeting beizutreten. Was ist hier los?
 
 Das ist der Scribe-Bot. Dieser Bot beobachtet den Bildschirm in Ihrer Besprechung, so dass er sehen kann, welche Folie gerade angezeigt wird, und die barrierefreie Version dieser Folie in Echtzeit für druckgeschädigte Teilnehmer bereitstellen kann. Der Scribe-Bot unterbricht Ihre Besprechung in keiner Weise und sammelt keine anderen Informationen als die, welche Inhalte gerade über die Bildschirmfreigabe angezeigt werden. Wenn Ihr Meeting einen Warteraum hat, lassen Sie den Scribe-Bot bitte sofort in das Meeting ein. Andernfalls wird Scribe for Meetings nicht funktionieren.
 
-### Ich bin ein druckgeschädigter Meeting-Teilnehmer und weiß nicht, ob das Meeting, an dem ich teilnehme, durch Scribe for Meetings registriert wurde. Was kann ich tun?
+### Ich bin ein Meeting-Teilnehmer mit einer Sehbehinderung und weiß nicht, ob das Meeting, an dem ich teilnehme, über Scribe for Meetings registriert wurde. Was kann ich tun?
 
 Gehen Sie zu [ScribeForMeetings.com] (https://scribeformeetings.com), fügen Sie den Link für die Einladung zu Ihrem Meeting bei Zoom oder Microsoft Teams ein und klicken Sie auf "Los". Wenn das Meeting bei Scribe for Meetings registriert wurde, können Sie mit den zugänglichen Folien mitlesen. Wenn nicht, können Sie sich anmelden, um per E-Mail benachrichtigt zu werden, wenn das Meeting bei Scribe for Meetings registriert wurde.
 
@@ -62,7 +62,7 @@ Ja. Bei der Erstellung des Meetings kann der Vortragende optional wählen, ob er
 * DAISY, Text plus Audio
 * EPUB
 * Microsoft Word
-* Braille-Schrift: Grad 1, Grad 2, Unified English Braille und viele andere Sprachen
+* Brailleschrift: Grad 1, Grad 2, Unified English Braille und viele andere Sprachen
 
 Die Optionen PDF und Microsoft Word unterstützen Großdruck. Diese Option und andere Optionen, wie z. B. die Sprechgeschwindigkeit für die Audioausgabe, können von den Teilnehmern ausgewählt werden, wenn sie die Folien herunterladen.
 Diese Funktion ist nicht standardmäßig aktiviert; der Vortragende muss sie zulassen. Um diese Funktion bei der Registrierung eines Meetings zu aktivieren, markieren Sie das Kontrollkästchen "Teilnehmern das Herunterladen barrierefreier Versionen von Folien erlauben" Diese Auswahl wird nur für die aktuell registrierte Besprechung wirksam.
@@ -74,14 +74,13 @@ Bei einem Meeting, bei dem diese Funktion aktiviert ist, enthält die Webseite, 
 1. Klicken Sie auf die Schaltfläche "Download vorbereiten".
 1. Warten Sie in Ihrer E-Mail auf den Download-Link. Bei den meisten Formaten wird die E-Mail innerhalb weniger Minuten eintreffen. Die Umwandlung in ein Audioformat kann je nach Länge des Foliendokuments wesentlich länger dauern, da die Sprachsynthese ein zeitaufwändigerer Prozess ist als andere Umwandlungen.
 
-### Ich veranstalte viele Meetings und möchte meinen Teilnehmern die Möglichkeit geben, die Folien für all diese Meetings herunterzuladen. Kann ich diese Funktion standardmäßig einschalten?
+### Ich veranstalte viele Meetings und möchte meinen Teilnehmern erlauben, die Folien für alle Meetings herunterzuladen. Kann ich diese Funktion standardmäßig einschalten?
 
 Ja. Gehen Sie wie folgt vor:
-1. 
-Gehen Sie zu ScribeForMeetings.com.
+1. Gehen Sie zu ScribeForMeetings.com.
 1. Wenn es oben auf der Seite einen Link "Anmelden" gibt, klicken Sie darauf, geben Sie Ihre E-Mail-Adresse ein und folgen Sie den Anweisungen, um sich bei Scribe for Meetings anzumelden.
 1. Klicken Sie auf "Einstellungen" und dann auf "Meeting Defaults".
-1. Aktivieren Sie das Kontrollkästchen "Teilnehmer dürfen zugängliche Versionen der Folien herunterladen" und klicken Sie dann auf "Speichern".
+1. Aktivieren Sie das Kontrollkästchen "Teilnehmer können zugängliche Versionen der Folien herunterladen" und klicken Sie dann auf "Speichern".
 
 ### Ich möchte meine Folien vor unbefugtem Kopieren und Verteilen schützen. Unterstützt Scribe for Meetings dies?
 
@@ -89,7 +88,7 @@ Leider kann Scribe for Meetings nicht verhindern, dass Ihre Teilnehmer den Text 
 
 ### Ist Scribe for Meetings mehrsprachig?
 
-Ja, Scribe for Meetings kann Inhalte in 140 Sprachen wiedergeben, ohne dass der Vortragende einen zusätzlichen Aufwand betreiben muss.
+Ja, Scribe for Meetings kann Inhalte in 140 Sprachen wiedergeben, und zwar ohne zusätzlichen Aufwand für den Vortragenden.
 
 ### Muss ich meine Präsentation verlangsamen, um sicherzustellen, dass die Teilnehmer mit Lese- und Schreibschwäche mithalten können?
 
@@ -99,21 +98,21 @@ Beachten Sie, dass die Teilnehmer im DVR-Modus nur die Folien ansehen können, d
 
 ### Ich habe einen Teilnehmer mit einer Sehbehinderung, der davon profitieren würde, dass meine Inhalte vorgelesen werden, der aber nicht mit einem Bildschirmlesegerät umgehen kann. Kann Scribe for Meetings dabei helfen?
 
-Ja. Unsere Vorlesefunktion spricht Ihre Folien mit den Stimmen des Geräts und des Webbrowsers des Teilnehmers und zeichnet dabei einen Rahmen um jedes gesprochene Wort, damit der Teilnehmer dem Text visuell folgen kann. Für Windows-Benutzer empfehlen wir den Microsoft Edge-Browser für diese Funktion, da Edge kostenlos hervorragende Stimmen in mehreren Sprachen bietet. Diese Funktion funktioniert jedoch auch mit allen anderen wichtigen Plattformen und Browsern, einschließlich mobiler Geräte.  
+Ja. Unsere Vorlesefunktion spricht Ihre Folien mit den Stimmen des Geräts und des Webbrowsers des Teilnehmers und zeichnet dabei einen Rahmen um jedes gesprochene Wort, damit der Teilnehmer visuell folgen kann. Für Windows-Benutzer empfehlen wir den Microsoft Edge-Browser für diese Funktion, da Edge kostenlos hervorragende Stimmen in mehreren Sprachen bietet. Diese Funktion funktioniert jedoch auch mit allen anderen wichtigen Plattformen und Browsern, einschließlich mobiler Geräte.  
 Um das Vorlesen der aktuellen Folie zu starten, drücken Sie auf die Schaltfläche Vorlesen, die sich am unteren Rand des Bildschirms befindet und wie ein Lautsprecher aussieht. Während Scribe for Meetings die Folie vorliest, werden Steuerelemente zum Anhalten des Vorlesens (die Schaltfläche mit dem quadratischen Symbol), zum Anhalten oder Fortsetzen, zum Zurück- oder Vorspulen (die Schaltflächen, die wie die Schaltflächen "Vorheriger Titel" und "Nächster Titel" in einem Media-Player aussehen), zum Beschleunigen und Verlangsamen des Vorlesens oder zum Ändern der Stimme angezeigt. Diese Steuerelemente werden ausgeblendet, sobald die Lektüre beendet ist oder der Benutzer sie anhält.  
 Beachten Sie, dass der Vorlese- und der DVR-Modus (siehe oben) zusammen verwendet werden können, damit Teilnehmer mit einer Lesebehinderung die Folien auf ihre eigene Weise und in ihrem eigenen Tempo lesen können.
 
 ### Ich habe einen sehbehinderten Teilnehmer, der meine Folien in einer großen Schrift benötigt, aber kein Vollbildvergrößerungsprogramm benötigt. Kann Scribe for Meetings dabei helfen?
 
-Ja. Scribe for Meetings zeigt Ihre Folien so an, dass sie für Teilnehmer mit allen Arten von Inhaltsanforderungen zugänglich sind. Wenn große Schriftarten benötigt werden, kann ein Teilnehmer die Seitenvergrößerungsfunktion seines Browsers nutzen, um die Schriftgröße der Folien anzupassen, ohne dass der Benutzer ständig hin- und herblättern muss. Scribe for Meetings zeigt den Text auch automatisch in dem vom Benutzer bevorzugten Farbschema an, sei es das übliche Dunkel-auf-Hell, Hell-auf-Dunkel (auch bekannt als Dunkelmodus) oder ein benutzerdefiniertes Schema.  
+Ja. Scribe for Meetings zeigt Ihre Folien so an, dass sie für Teilnehmer mit allen Arten von Inhaltsanforderungen zugänglich sind. Wenn große Schriftarten benötigt werden, kann ein Teilnehmer die Seitenvergrößerungsfunktion seines Browsers verwenden, um die Schriftgröße der Folien anzupassen, ohne dass der Benutzer ständig hin- und herblättern muss. Scribe for Meetings zeigt den Text auch automatisch in dem vom Benutzer bevorzugten Farbschema an, sei es das übliche Dunkel-auf-Hell, Hell-auf-Dunkel (auch bekannt als Dunkelmodus) oder ein benutzerdefiniertes Schema.  
 
-### Moment mal, was ist hier los? Warum sehen meine Folien in Scribe for Meetings so anders aus als in meiner Präsentation?
+### Moment mal, was ist denn hier los? Warum sehen meine Folien in Scribe for Meetings so anders aus als in meiner Präsentation?
 
-Jeder Aspekt der Darstellung Ihrer Folien in Scribe for Meetings ist für die Barrierefreiheit optimiert, für Teilnehmer mit allen Arten von Druckbehinderungen. Da Scribe for Meetings als Ergänzung zu Ihrer bestehenden Meeting-Plattform gedacht ist, können die Teilnehmer jederzeit zum Hauptfenster des Meetings zurückblättern, um die Folien so zu sehen, wie sie in Ihrer Präsentation ohne Barrierefreiheit angezeigt werden.
+Jeder Aspekt der Darstellung Ihrer Folien in Scribe for Meetings ist für die Barrierefreiheit optimiert, für Teilnehmer mit allen Arten von Druckschwierigkeiten. Da Scribe for Meetings als Ergänzung zu Ihrer bestehenden Meeting-Plattform gedacht ist, können die Teilnehmer jederzeit zum Hauptfenster des Meetings zurückblättern, um die Folien so zu sehen, wie sie in Ihrer Präsentation ohne Barrierefreiheit angezeigt werden.
 
 ### Ich verwende kein PowerPoint. Kann ich meine Präsentation trotzdem mit Scribe for Meetings zugänglich machen?
 
-Scribe for Meetings kann Ihre gemeinsam genutzten Folien zugänglich machen, unabhängig davon, welche Anwendung Sie für die Präsentation verwenden, solange Sie Ihr Foliendokument im PowerPoint-Format bereitstellen können. Andere Präsentationsanwendungen wie Keynote und Google Slides können ihre Foliendateien in das PowerPoint-Format konvertieren, so dass Sie diese mit Scribe for Meetings verwenden können.
+Scribe for Meetings kann Ihre gemeinsam genutzten Folien zugänglich machen, unabhängig davon, welche Anwendung Sie für die Präsentation verwenden, solange Sie Ihre Folien im PowerPoint-Format bereitstellen können. Andere Präsentations-Apps wie Keynote und Google Slides können ihre Foliendateien in das PowerPoint-Format konvertieren, so dass Sie diese mit Scribe for Meetings verwenden können.
 
 ### Scribe for Meetings zeigt während der Präsentation nicht die zugänglichen Versionen meiner Folien an, oder es überspringt einige Folien. Was ist das Problem?
 
@@ -135,8 +134,12 @@ Noch nicht, aber das wird bald der Fall sein.
 
 ### Wie melden sich Personen innerhalb unserer Organisation bei Scribe for Meetings an?
 
-Scribe for Meetings unterstützt derzeit zwei Optionen für die Authentifizierung. Die einfachste Option ist unser E-Mail-basierter Anmeldeprozess. Geben Sie einfach Ihre E-Mail-Adresse ein, und wir senden Ihnen einen Link, mit dem Sie sich anmelden können; ein Passwort ist nicht erforderlich. Für Organisationen mit strengeren Sicherheitsanforderungen können wir auch Single Sign-On (SSO)-Systeme integrieren, die den SAML-Standard implementieren, entweder über den [InCommon](https://www.incommon.org/)-Verbund oder durch bilateralen Metadatenaustausch. Unser SAML-Dienstanbieter verwendet das Open-Source-Paket Shibboleth SP und wurde in Zusammenarbeit mit [Signet, Inc.](https://www.signet.id/) implementiert, einem Unternehmen für Identitätsmanagement und Zugriffskontrolle, das von einem Architekten von Shibboleth gegründet wurde. Beachten Sie, dass wir SSO durch eine Vielzahl von Identitätsanbietern unterstützen; zusätzlich zu Shibboleth IdP haben wir mit Azure Active Directory getestet. Wenn sich Ihre Organisation bei Scribe for Meetings anmeldet, bieten wir SSO-Onboarding an, das durch die Einrichtungsgebühr abgedeckt ist.
+Scribe for Meetings unterstützt derzeit zwei Optionen für die Authentifizierung. Die einfachste Option ist unser E-Mail-basierter Anmeldeprozess. Geben Sie einfach Ihre E-Mail-Adresse ein, und wir senden Ihnen einen Link, mit dem Sie sich anmelden können; ein Passwort ist nicht erforderlich. Für Organisationen mit strengeren Sicherheitsanforderungen können wir auch Single Sign-On (SSO)-Systeme integrieren, die den SAML-Standard implementieren, entweder über den [InCommon](https://www.incommon.org/)-Verbund oder über bilateralen Metadatenaustausch. Unser SAML-Dienstanbieter verwendet das Open-Source-Paket Shibboleth SP und wurde in Zusammenarbeit mit [Signet, Inc.](https://www.signet.id/) implementiert, einem Unternehmen für Identitätsmanagement und Zugriffskontrolle, das von einem Architekten von Shibboleth gegründet wurde. Beachten Sie, dass wir SSO durch eine Vielzahl von Identitätsanbietern unterstützen; zusätzlich zu Shibboleth IdP haben wir mit Azure Active Directory getestet. Wenn sich Ihre Organisation bei Scribe for Meetings anmeldet, bieten wir SSO-Onboarding an, das durch die Einrichtungsgebühr abgedeckt ist.
 
-### Wie sieht die Zukunft von Scribe for Meetings aus?
+### In welchem Umfang werden Daten durch den Scribe for Meetings-Bot gesammelt, wie werden die gesammelten Daten verwendet und wer hat Zugriff auf die gesammelten Daten?
+
+Der Scribe-Bot verarbeitet die Bildschirminhalte, die von dem/den Vortragenden freigegeben werden. Diese Daten verbleiben in unserem sicheren Netzwerk und werden von Dritten weder gespeichert noch verarbeitet.
+
+### Was ist die Zukunft von Scribe for Meetings?
 
 Scribe, die Plattform hinter unserer Scribe-Produktlinie, lernt aktiv bei jeder Verarbeitung eines Dokuments. Die auf maschinellem Lernen basierende Augmented Document Remediation-Technologie wird mit jeder Seite intelligenter und bringt uns der 100-prozentigen Genauigkeit ein großes Stück näher. Diese Vorteile wirken sich auf alle unsere Produkte aus und machen Scribe for Meetings zu einer Anwendung, die immer besser wird, je öfter Sie sie verwenden.
