--- a/src/content/docs/it/faq.mdx
+++ b/src/content/docs/it/faq.mdx
@@ -6,17 +6,17 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Ecco le risposte ad alcune domande comuni su Scribe for Meetings. Quando vi trovate di fronte a un problema, fate riferimento a questo documento ogni volta che è possibile.  
-Non trovate la vostra domanda? [Contattateci] (https://pneumasolutions.com/contact/) e vediamo di risolvere il problema.
+Non trovate la vostra domanda? [Contattateci] (https://pneumasolutions.com/contact/), e vediamo di risolvere il problema.
 
-### Cos'è Scribe for Meetings?
+### Che cos'è Scribe for Meetings?
 
 Scribe for Meetings è una tecnologia basata sul cloud che prende una presentazione condivisa su piattaforme come Zoom, Microsoft Teams, Google Meet e altre e la trasforma in una presentazione accessibile in tempo reale per le persone con disabilità di stampa.
 
 ### Chi beneficia di Scribe for Meetings?
 
-In primo luogo, e soprattutto, i milioni di persone con disabilità di stampa che altrimenti non trarrebbero beneficio dalle informazioni presentate; inoltre, le masse di aziende grandi e piccole, agenzie governative, istituti scolastici di ogni livello e organizzazioni che sanno poco di accessibilità ma vorrebbero un mezzo economico per rendere i loro contenuti più inclusivi.
+In primo luogo, e soprattutto, i milioni di persone con disabilità di stampa che altrimenti non potrebbero beneficiare delle informazioni presentate; inoltre, le masse di aziende grandi e piccole, agenzie governative, istituti scolastici di ogni livello e organizzazioni che conoscono poco l'accessibilità ma che vorrebbero un mezzo economico per rendere i loro contenuti più inclusivi.
 
-### Perché scegliere Scribe for Meetings rispetto ad altri prodotti?
+### Perché dovrei scegliere Scribe for Meetings rispetto ad altri prodotti?
 
 Siamo convinti che non ci sia nient'altro in circolazione che faccia quello che facciamo noi nel modo in cui lo facciamo noi. Scribe for Meetings è la prima tecnologia del suo genere a sincronizzarsi con le piattaforme di riunione in tempo reale. Certo, i concorrenti ne prenderanno atto e probabilmente lanceranno le loro imitazioni, e noi non vediamo l'ora di vederle, ma a meno che non intendano competere sul prezzo, siamo certi che troverete quello che vi serve proprio qui.
 
@@ -37,9 +37,9 @@ Per i partecipanti alle riunioni con disabilità di stampa, navigare su https://
 Scribe for Meetings non è un'applicazione installata. È un servizio cloud, quindi non è necessario altro che un browser per partecipare a una riunione. Per i presentatori, a parte il caricamento dei contenuti prima della riunione, il processo è stato intenzionalmente progettato per essere semplice. Non c'è nulla da installare sul computer o sul dispositivo, a parte Zoom, Microsoft Teams o piattaforme di riunione simili.
 I clienti aziendali possono ospitare Scribe for Meetings sui propri server. Contattateci per i dettagli.
 
-### Vedo un partecipante chiamato "Scribe for Meetings" che cerca di unirsi alla mia riunione. Cosa succede?
+### Vedo un partecipante chiamato "Scribe for Meetings" che cerca di unirsi alla mia riunione. Cosa sta succedendo?
 
-Si tratta del bot Scribe. Questo bot osserva lo schermo della riunione, in modo da vedere quale diapositiva è attualmente visualizzata e fornire la versione accessibile di quella diapositiva in tempo reale ai partecipanti con disabilità di stampa. Il bot Scribe non interromperà in alcun modo la riunione e non raccoglierà altre informazioni se non quelle relative ai contenuti attualmente visualizzati attraverso la condivisione dello schermo. Se la riunione prevede una sala d'attesa, si prega di ammettere prontamente il bot Scribe alla riunione. In caso contrario, Scribe for Meetings non funzionerà.
+Si tratta del bot Scribe. Questo bot osserva lo schermo della riunione, in modo da poter vedere quale diapositiva è attualmente visualizzata e fornire la versione accessibile di quella diapositiva in tempo reale ai partecipanti con disabilità di stampa. Il bot Scribe non interromperà in alcun modo la riunione e non raccoglierà altre informazioni se non quelle relative ai contenuti attualmente visualizzati attraverso la condivisione dello schermo. Se la riunione prevede una sala d'attesa, si prega di ammettere prontamente il bot Scribe alla riunione. In caso contrario, Scribe for Meetings non funzionerà.
 
 ### Sono un partecipante a una riunione con disabilità di stampa e non so se la riunione a cui sto partecipando è stata registrata tramite Scribe for Meetings. Cosa posso fare?
 
@@ -55,7 +55,7 @@ Sì, consultate il nostro [Kit di autopromozione di Scribe for Meetings](https:/
 
 ### Scribe for Meetings può convertire una presentazione in formati di file accessibili per la visualizzazione offline?
 
-Si. Durante la creazione della riunione, il relatore può scegliere di fornire la propria presentazione per il download nei seguenti formati di file:
+Sì. Quando si crea la riunione, il presentatore Quando si crea la riunione, il relatore può scegliere di fornire la presentazione per il download nei seguenti formati di file:
 * Una pagina web accessibile, con tutte le stesse caratteristiche della presentazione dal vivo, compresa la lettura ad alta voce
 * PDF con etichetta
 * MP3, con sintesi vocale in circa una dozzina di lingue
@@ -76,28 +76,27 @@ Per una riunione in cui questa funzione è abilitata, non appena il relatore mos
 
 ### Organizzo molte riunioni e voglio consentire ai miei partecipanti di scaricare le diapositive per tutte le riunioni. Posso attivare questa funzione per impostazione predefinita?
 
-Sì, è possibile. Procedete come segue:
-1. 
-Andare su ScribeForMeetings.com.
+Sì, è possibile. Seguite questi passaggi:
+1. Andare su ScribeForMeetings.com.
 1. Se nella parte superiore della pagina è presente un link "Log In", cliccatelo, inserite il vostro indirizzo e-mail e seguite le istruzioni per accedere a Scribe for Meetings.
 1. Fare clic su "Impostazioni", quindi su "Predefinite per le riunioni".
 1. Selezionate la casella di controllo "Consenti ai partecipanti di scaricare versioni accessibili delle diapositive", quindi fate clic su "Salva".
 
 ### Voglio proteggere le mie diapositive da copie e distribuzioni non autorizzate. Scribe for Meetings lo supporta?
 
-Purtroppo, Scribe for Meetings non può impedire ai partecipanti di copiare il testo delle diapositive. Tuttavia, se non si consente il download delle diapositive, non sarà facile per i partecipanti copiare le diapositive, perché dovranno copiare una diapositiva alla volta. Si noti inoltre che, in pratica, questo non è diverso da ciò che qualsiasi partecipante può già fare scattando screenshot delle vostre diapositive.
+Purtroppo Scribe for Meetings non può impedire ai partecipanti di copiare il testo delle diapositive. Tuttavia, se non si consente il download delle diapositive, non sarà facile per i partecipanti copiare le diapositive, perché dovranno copiare una diapositiva alla volta. Si noti inoltre che, in pratica, questo non è diverso da ciò che qualsiasi partecipante può già fare scattando screenshot delle vostre diapositive.
 
 ### Scribe for Meetings è multilingue?
 
-Sì. Scribe for Meetings è in grado di riprodurre i contenuti in 140 lingue, senza alcuno sforzo aggiuntivo da parte del relatore.
+Sì. Scribe for Meetings può riprodurre i contenuti in 140 lingue, senza alcuno sforzo aggiuntivo da parte del relatore.
 
 ### Devo rallentare la mia presentazione per assicurarmi che i partecipanti con problemi di stampa possano seguirla?
 
-No. Scribe for Meetings dispone di una funzione chiamata Rappresentazione visiva dinamica, o in breve modalità DVR, che consente ai partecipanti con disabilità di stampa di leggere le diapositive accessibili al proprio ritmo. Un partecipante può mettere in pausa la presentazione dal vivo, tornare a una diapositiva che ha già letto, andare avanti al proprio ritmo e poi continuare con la presentazione dal vivo quando è pronto.
+No. Scribe for Meetings dispone di una funzione chiamata Rappresentazione visiva dinamica, o modalità DVR, che consente ai partecipanti con disabilità di stampa di leggere le diapositive accessibili al proprio ritmo. Un partecipante può mettere in pausa la presentazione dal vivo, tornare a una diapositiva che ha già letto, andare avanti al proprio ritmo e poi continuare con la presentazione dal vivo quando è pronto.
 Per utilizzare la modalità DVR, il partecipante deve premere il pulsante Sospendi presentazione o il pulsante Diapositiva precedente. Questi pulsanti sono etichettati come tali per gli utenti di screen reader e per gli utenti del mouse che ci passano sopra. Visivamente, si trovano nella parte inferiore della pagina e assomigliano ai pulsanti Pausa e Traccia precedente di un lettore multimediale. Quando l'utente preme uno di questi pulsanti, la presentazione dal vivo viene messa in pausa e, nel caso del pulsante Diapositiva precedente, si torna alla diapositiva precedente. L'utente può quindi utilizzare i pulsanti Diapositiva precedente e Diapositiva successiva per scorrere le diapositive al proprio ritmo e il pulsante Vai alla diretta per tornare alla presentazione dal vivo. Questi pulsanti sono simili ai pulsanti Traccia precedente, Traccia successiva e Riproduci di un lettore multimediale.  
 Si noti che la modalità DVR consente ai partecipanti di rivedere solo le diapositive che sono state mostrate da quando sono entrati nella presentazione. Se un partecipante con disabilità di stampa arriva in ritardo alla presentazione, si perde le stesse diapositive che si sarebbe perso qualsiasi altro partecipante in ritardo.
 
-### Ho un partecipante con disabilità di stampa che trarrebbe beneficio dalla riproduzione ad alta voce dei miei contenuti, ma non è a suo agio con un lettore di schermo completo. Scribe for Meetings può aiutarmi?
+### Ho un partecipante con disabilità di stampa che trarrebbe beneficio dalla riproduzione ad alta voce dei miei contenuti, ma non si sente a suo agio con un lettore di schermo completo. Scribe for Meetings può aiutarlo?
 
 Sì. La nostra funzione di lettura ad alta voce La nostra funzione di lettura ad alta voce riproduce le diapositive utilizzando le voci fornite dal dispositivo e dal browser web dell'utente, disegnando al contempo un riquadro attorno a ciascuna parola mentre viene pronunciata per aiutare l'utente a seguirla visivamente. Per gli utenti Windows, consigliamo vivamente di utilizzare il browser Microsoft Edge per questa funzione, in quanto Edge offre gratuitamente voci eccezionali in diverse lingue. Tuttavia, questa funzione funziona anche con tutte le altre principali piattaforme e browser, compresi i dispositivi mobili.  
 Per iniziare a leggere ad alta voce la diapositiva corrente, premere il pulsante Leggi ad alta voce, che si trova nella parte inferiore dello schermo e ha l'aspetto di un altoparlante. Mentre Scribe for Meetings legge la diapositiva ad alta voce, vengono visualizzati i controlli per interrompere la lettura (il pulsante con l'icona quadrata), mettere in pausa o riprendere, andare indietro o avanti (i pulsanti che assomigliano ai pulsanti Traccia precedente e Traccia successiva di un lettore multimediale), accelerare e rallentare la lettura o cambiare la voce. Questi controlli spariranno non appena la lettura sarà terminata o non appena l'utente la interromperà.  
@@ -107,13 +106,13 @@ Si noti che la modalità Lettura ad alta voce e la modalità DVR (vedi sopra) po
 
 Sì. Scribe for Meetings visualizza le diapositive in modo da renderle accessibili ai partecipanti con qualsiasi tipo di esigenza di contenuto. Se sono necessari caratteri grandi, i partecipanti possono utilizzare la funzione di zoom della pagina del browser per regolare le dimensioni dei caratteri delle diapositive, senza dover scorrere continuamente avanti e indietro. Scribe for Meetings visualizza inoltre automaticamente il testo nella combinazione di colori preferita dall'utente, sia che si tratti della consueta modalità scuro su chiaro, chiaro su scuro (nota anche come modalità scura) o di una combinazione personalizzata.  
 
-### Aspettate! Cosa sta succedendo? Perché le mie diapositive hanno un aspetto così diverso in Scribe for Meetings rispetto alla mia presentazione?
+### Aspettate! Cosa sta succedendo qui? Perché le mie diapositive appaiono così diverse in Scribe for Meetings rispetto alla mia presentazione?
 
 Ogni aspetto della visualizzazione delle diapositive da parte di Scribe for Meetings è ottimizzato per l'accessibilità, per i partecipanti con qualsiasi tipo di disabilità di stampa. Poiché Scribe for Meetings è pensato per essere utilizzato insieme alla piattaforma di riunione esistente, i partecipanti sono sempre liberi di tornare alla finestra principale della riunione per vedere le diapositive così come sono visualizzate nella presentazione senza accessibilità.
 
 ### Non uso PowerPoint. Posso comunque rendere accessibile la mia presentazione con Scribe for Meetings?
 
-Scribe for Meetings è in grado di rendere accessibili le diapositive condivise sullo schermo indipendentemente dall'applicazione utilizzata per la presentazione, purché sia possibile fornire la presentazione in formato PowerPoint. Altre app di presentazione, come Keynote e Google Slides, sono in grado di convertire le diapositive in formato PowerPoint, quindi possono essere utilizzate con Scribe for Meetings.
+Scribe for Meetings è in grado di rendere accessibili le diapositive condivise sullo schermo indipendentemente dall'applicazione utilizzata per la presentazione, purché si possa fornire la presentazione in formato PowerPoint. Altre app di presentazione, come Keynote e Google Slides, sono in grado di convertire le diapositive in formato PowerPoint, quindi possono essere utilizzate con Scribe for Meetings.
 
 ### Scribe for Meetings non mostra le versioni accessibili delle mie diapositive durante la presentazione, oppure salta alcune diapositive. Cosa c'è che non va?
 
@@ -123,7 +122,7 @@ Assicuratevi di presentare le diapositive in una presentazione a schermo intero 
 
 ### Come gestisce Scribe for Meetings le immagini e la grafica nelle mie diapositive?
 
-Se sono già state scritte descrizioni (note anche come tag alt o didascalie) per il contenuto grafico delle diapositive, Scribe for Meetings le utilizzerà. Altrimenti, Scribe for Meetings utilizzerà un servizio di descrizione delle immagini basato su cloud e basato sull'apprendimento automatico per aggiungere automaticamente i tag alt per la grafica. Se le immagini contengono testo, Scribe for Meetings utilizzerà anche il riconoscimento ottico dei caratteri (OCR) per rendere accessibile il testo.
+Se sono già state scritte descrizioni (note anche come tag alt o didascalie) per il contenuto grafico delle diapositive, Scribe for Meetings le utilizzerà. In caso contrario, Scribe for Meetings utilizzerà un servizio di descrizione delle immagini basato su cloud e basato sull'apprendimento automatico per aggiungere automaticamente tag alt ai contenuti grafici. Se le immagini contengono testo, Scribe for Meetings utilizzerà anche il riconoscimento ottico dei caratteri (OCR) per rendere accessibile il testo.
 
 ### Le mie diapositive contengono grafici, diagrammi o altri elementi grafici complessi. Scribe for Meetings è in grado di gestirli?
 
@@ -136,6 +135,10 @@ Non ancora, ma lo farà presto.
 ### Come fanno le persone della nostra organizzazione ad accedere a Scribe for Meetings?
 
 Scribe for Meetings supporta attualmente due opzioni di autenticazione. L'opzione più semplice è il nostro processo di login basato sull'e-mail. È sufficiente inserire il proprio indirizzo e-mail e verrà inviato un link da utilizzare per accedere; non è necessaria alcuna password. Per le organizzazioni con requisiti di sicurezza più severi, possiamo anche integrarci con sistemi di single sign-on (SSO) che implementano lo standard SAML, sia tramite la federazione [InCommon](https://www.incommon.org/) sia utilizzando lo scambio bilaterale di metadati. Il nostro fornitore di servizi SAML utilizza il pacchetto open-source Shibboleth SP ed è stato implementato in collaborazione con [Signet, Inc.,](https://www.signet.id/) un'azienda di gestione delle identità e controllo degli accessi fondata da un architetto di Shibboleth. Si noti che supportiamo l'SSO attraverso una varietà di identity provider; oltre all'IdP Shibboleth, abbiamo testato Azure Active Directory. Quando la vostra organizzazione si iscrive a Scribe for Meetings, vi offriremo l'onboarding SSO, coperto dal costo di installazione.
+
+### Qual è la portata dei dati raccolti attraverso il bot di Scribe for Meetings, quali sono gli usi di tali dati raccolti e chi ha accesso ai dati raccolti?
+
+Il bot Scribe elabora i contenuti dello schermo condivisi dai presentatori. Tali dati rimangono all'interno della nostra rete protetta e non vengono memorizzati o elaborati da terzi.
 
 ### Qual è il futuro di Scribe for Meetings?
 
