--- a/src/content/docs/nl/faq.mdx
+++ b/src/content/docs/nl/faq.mdx
@@ -18,7 +18,7 @@ In de eerste plaats de miljoenen mensen met een visuele beperking die anders gee
 
 ### Waarom zou ik Scribe for Meetings kiezen in plaats van andere producten?
 
-We zijn ervan overtuigd dat er niets anders is dat precies doet wat wij doen. Scribe for Meetings is de eerste technologie in zijn soort die in real-time synchroniseert met vergaderplatforms. Natuurlijk zullen concurrenten dit opmerken en waarschijnlijk hun imitaties uitbrengen, en we kijken uit naar de concurrentie, maar tenzij ze van plan zijn te concurreren op prijs, zijn wij ervan overtuigd dat u hier zult vinden wat u nodig hebt.
+We zijn ervan overtuigd dat er niets anders is dat precies doet wat wij doen. Scribe for Meetings is de eerste technologie in zijn soort die in real-time synchroniseert met vergaderplatforms. Natuurlijk zullen concurrenten dit opmerken en waarschijnlijk hun imitaties uitbrengen, en we kijken uit naar de concurrentie, maar tenzij ze van plan zijn om te concurreren op prijs, zijn wij ervan overtuigd dat u hier zult vinden wat u nodig hebt.
 
 ### Hoe werkt Scribe for Meetings?
 
@@ -66,7 +66,7 @@ Ja. Bij het aanmaken van de vergadering kan de presentator ervoor kiezen om zijn
 
 De PDF en Microsoft Word opties ondersteunen grote letters. Deze optie, en andere opties zoals spreeksnelheid voor audio-uitvoer, kunnen gekozen worden door deelnemers wanneer ze de dia's downloaden.
 Deze functie is niet standaard ingeschakeld; de presentator moet ervoor kiezen om dit toe te staan. Om deze functie in te schakelen tijdens het registreren van een vergadering, vink je het vakje "Deelnemers toestaan om toegankelijke versies van dia's te downloaden" aan Deze keuze is alleen van kracht voor de vergadering die op dat moment wordt geregistreerd.
-Voor een vergadering waar deze functie is ingeschakeld, zal zodra de presentator een dia heeft getoond, de webpagina waar de aanwezigen de toegankelijke dia's bekijken een link "Dia's downloaden" bevatten. Om de dia's te downloaden, moet een bezoeker deze stappen volgen:
+Voor een vergadering waar deze functie is ingeschakeld, zal zodra de presentator een dia heeft getoond, de webpagina waar de aanwezigen de toegankelijke dia's bekijken een link "Dia's downloaden" bevatten. Om de dia's te downloaden, moet een deelnemer deze stappen volgen:
 1. Klik op de link "Download dia's".
 1. Voer je e-mailadres in als daarom wordt gevraagd en volg de instructies om in te loggen.
 1. Kies het gewenste toegankelijke formaat.
@@ -78,7 +78,7 @@ Voor een vergadering waar deze functie is ingeschakeld, zal zodra de presentator
 
 Ja. Volg deze stappen:
 1. Ga naar ScribeForMeetings.com.
-1. Als er een link "Aanmelden" boven aan de pagina staat, klikt u daarop, voert u uw e-mailadres in en volgt u de instructies om u aan te melden bij Scribe for Meetings.
+1. Als er bovenaan de pagina een link "Aanmelden" staat, klik daarop, voer uw e-mailadres in en volg de instructies om u aan te melden bij Scribe for Meetings.
 1. Klik op "Instellingen" en vervolgens op "Meeting Defaults".
 1. Schakel het selectievakje "Deelnemers toestaan om toegankelijke versies van dia's te downloaden" in en klik op "Opslaan".
 
@@ -98,7 +98,7 @@ Merk op dat in de DVR-modus deelnemers alleen de dia's kunnen bekijken die getoo
 
 ### Ik heb een deelnemer met een visuele beperking die er baat bij heeft dat mijn inhoud hardop wordt voorgelezen, maar die zich niet op zijn gemak voelt met een schermlezer. Kan Scribe for Meetings helpen?
 
-Ja. Onze voorleesfunctie spreekt uw dia's voor met behulp van de stemmen die worden geleverd door het apparaat en de webbrowser van de gebruiker, terwijl er een kader om elk woord wordt getekend terwijl het wordt uitgesproken om de gebruiker te helpen visueel mee te volgen. Voor Windows-gebruikers raden we de Microsoft Edge-browser aan voor deze functie, omdat Edge gratis uitstekende stemmen in verschillende talen biedt. Deze functie werkt echter ook op alle andere belangrijke platforms en browsers, inclusief mobiele apparaten.  
+Ja. Onze voorleesfunctie spreekt uw dia's voor met de stemmen van het apparaat en de webbrowser van de gebruiker, terwijl er een kader om elk woord wordt getekend terwijl het wordt uitgesproken om de gebruiker te helpen visueel mee te volgen. Voor Windows-gebruikers raden we de Microsoft Edge-browser aan voor deze functie, omdat Edge gratis uitstekende stemmen in verschillende talen biedt. Deze functie werkt echter ook op alle andere belangrijke platforms en browsers, inclusief mobiele apparaten.  
 Om te beginnen met het voorlezen van de huidige dia, druk je op de voorleesknop, die onderaan het scherm staat en eruit ziet als een luidspreker. Terwijl Scribe voor Vergaderingen de dia voorleest, toont het controles om het voorlezen te stoppen (de knop met een vierkant pictogram), te pauzeren of te hervatten, terug of vooruit te gaan (de knoppen die eruit zien als de knoppen Vorige track en Volgende track in een mediaspeler), het voorlezen te versnellen of te vertragen, of de stem te veranderen. Deze knoppen verdwijnen zodra het lezen is voltooid of zodra de gebruiker stopt.  
 Voorlezen en de DVR-modus (zie hierboven) kunnen samen worden gebruikt, zodat mensen met een visuele beperking de dia's op hun eigen manier en in hun eigen tempo kunnen lezen.
 
@@ -134,8 +134,12 @@ Nog niet, maar dat komt binnenkort.
 
 ### Hoe kunnen mensen binnen onze organisatie inloggen bij Scribe for Meetings?
 
-Scribe for Meetings ondersteunt momenteel twee opties voor verificatie. De eenvoudigste optie is ons inlogproces via e-mail. Voer uw e-mailadres in en wij sturen u een link waarmee u kunt inloggen; u heeft geen wachtwoord nodig. Voor organisaties met strengere beveiligingseisen kunnen we ook integreren met SSO-systemen (Single Sign-On) die de SAML-standaard implementeren, via de federatie [InCommon](https://www.incommon.org/) of met behulp van bilaterale uitwisseling van metadata. Onze SAML service provider gebruikt het open-source Shibboleth SP pakket en is geïmplementeerd in samenwerking met [Signet, Inc.,](https://www.signet.id/) een identity management en toegangscontrole bedrijf opgericht door een architect van Shibboleth. Merk op dat we SSO ondersteunen via verschillende identity providers; naast Shibboleth IdP hebben we getest met Azure Active Directory. Wanneer uw organisatie zich aanmeldt bij Scribe for Meetings, bieden we SSO onboarding aan, gedekt door de installatiekosten.
+Scribe for Meetings ondersteunt momenteel twee opties voor verificatie. De eenvoudigste optie is ons inlogproces via e-mail. Vul uw e-mailadres in en wij sturen u een link waarmee u kunt inloggen; u heeft geen wachtwoord nodig. Voor organisaties met strengere beveiligingseisen kunnen we ook integreren met SSO-systemen (Single Sign-On) die de SAML-standaard implementeren, via de federatie [InCommon](https://www.incommon.org/) of met behulp van bilaterale uitwisseling van metadata. Onze SAML service provider gebruikt het open-source Shibboleth SP pakket en is geïmplementeerd in samenwerking met [Signet, Inc.,](https://www.signet.id/) een identity management en toegangscontrole bedrijf opgericht door een architect van Shibboleth. Merk op dat we SSO ondersteunen via verschillende identity providers; naast Shibboleth IdP hebben we getest met Azure Active Directory. Wanneer uw organisatie zich aanmeldt bij Scribe for Meetings, bieden we SSO onboarding aan, gedekt door de installatiekosten.
 
-### Wat is de toekomst van Scribe for Meetings?
+### Wat is de omvang van de gegevens die worden verzameld door de Scribe for Meetings bot, welk gebruik wordt er gemaakt van de verzamelde gegevens en wie heeft toegang tot de verzamelde gegevens?
 
-Scribe, het platform achter onze Scribe productlijn, leert actief elke keer dat een document wordt verwerkt. De Augmented Document Remediation technologie wordt met elke pagina slimmer en brengt ons dichter bij 100% nauwkeurigheid. De voordelen werken door in al onze producten, waardoor Scribe voor Meetings een applicatie is die alleen maar beter wordt naarmate je het meer gebruikt.
+De Scribe-bot verwerkt de scherminhoud die door de presentator(en) wordt gedeeld. Deze gegevens blijven binnen ons beveiligde netwerk en worden niet opgeslagen of verwerkt door derden.
+
+### Wat is de toekomst van Scribe voor vergaderingen?
+
+Scribe, het platform achter onze Scribe-productlijn, leert actief elke keer dat een document wordt verwerkt. De Augmented Document Remediation technologie wordt met elke pagina slimmer en brengt ons dichter bij 100% nauwkeurigheid. De voordelen werken door in al onze producten, waardoor Scribe voor Meetings een applicatie is die alleen maar beter wordt naarmate je het meer gebruikt.
