--- a/src/content/docs/pt/faq.mdx
+++ b/src/content/docs/pt/faq.mdx
@@ -12,13 +12,13 @@ Não encontrou sua pergunta? [Entre em contato conosco] (https://pneumasolutions
 
 O Scribe for Meetings é uma tecnologia baseada em nuvem que utiliza uma apresentação compartilhada em plataformas como Zoom, Microsoft Teams, Google Meet e outras e a transforma em uma apresentação acessível em tempo real para pessoas com deficiência de impressão.
 
-### Quem se beneficia com o Scribe for Meetings?
+### Quem se beneficia do Scribe for Meetings?
 
 Em primeiro lugar, e mais importante, os milhões de pessoas com deficiência de impressão que, de outra forma, não se beneficiariam das informações que estão sendo apresentadas; e as massas de empresas grandes e pequenas, agências governamentais, todos os níveis de educação e organizações que sabem pouco sobre acessibilidade, mas que gostariam de um meio acessível de tornar seu conteúdo mais inclusivo.
 
-### Por que devo escolher o Scribe for Meetings em vez de outros produtos?
+### Por que eu deveria escolher o Scribe for Meetings em vez de outros produtos?
 
-Temos certeza de que não há nada no mercado que faça o que fazemos da mesma forma que nós. O Scribe for Meetings é a primeira tecnologia do gênero a sincronizar-se com plataformas de reuniões em tempo real. É claro que os concorrentes tomarão nota e provavelmente lançarão suas imitações, e estamos ansiosos pela concorrência, mas, a menos que eles planejem competir em termos de preço, temos certeza de que você encontrará o que precisa aqui mesmo.
+Estamos confiantes de que não há nada no mercado que faça o que fazemos da mesma forma que nós fazemos. O Scribe for Meetings é a primeira tecnologia do gênero a sincronizar-se com plataformas de reuniões em tempo real. É claro que os concorrentes tomarão nota e provavelmente lançarão suas imitações, e estamos ansiosos pela concorrência, mas, a menos que eles planejem competir em termos de preço, temos certeza de que você encontrará o que precisa aqui mesmo.
 
 ### Como funciona o Scribe for Meetings?
 
@@ -34,18 +34,18 @@ Para o participante da reunião com deficiência de impressão, navegue até htt
 
 ### Qual é o grau de dificuldade para instalar o Scribe for Meetings?
 
-O Scribe for Meetings não é um aplicativo instalado. É um serviço de nuvem, portanto, não é necessário nada mais do que um navegador para participar de uma reunião. Para os apresentadores, além de fazer o upload de seu conteúdo antes da reunião, o processo foi intencionalmente projetado para ser simples. Não há nada para instalar em seu computador ou dispositivo além do Zoom, Microsoft Teams ou plataformas de reunião semelhantes.
+O Scribe for Meetings não é um aplicativo instalado. Ele é um serviço de nuvem, portanto, nada mais é necessário do que um navegador para participar de uma reunião. Para os apresentadores, além de fazer o upload de seu conteúdo antes da reunião, o processo foi intencionalmente projetado para ser simples. Não há nada para instalar em seu computador ou dispositivo além do Zoom, Microsoft Teams ou plataformas de reunião semelhantes.
 Os clientes corporativos podem hospedar o Scribe for Meetings em seus próprios servidores. Entre em contato conosco para obter detalhes.
 
 ### Vejo um participante chamado "Scribe for Meetings" tentando entrar em minha reunião. O que está acontecendo?
 
-Esse é o bot do Scribe. Esse bot observa a tela da sua reunião, para que possa ver qual slide está sendo exibido no momento e fornecer a versão acessível desse slide em tempo real para os participantes com deficiência de impressão. O bot Scribe não interromperá a reunião de forma alguma e não coletará nenhuma informação além do conteúdo que está sendo exibido no momento por meio do compartilhamento de tela. Se a sua reunião tiver uma sala de espera, permita que o bot do Scribe entre imediatamente na reunião. Caso contrário, o Scribe for Meetings não funcionará.
+Esse é o bot do Scribe. Esse bot observa a tela da sua reunião, para que possa ver qual slide está sendo exibido no momento e fornecer a versão acessível desse slide em tempo real para os participantes com deficiência de impressão. O bot Scribe não interromperá a reunião de forma alguma e não coletará nenhuma informação além do conteúdo que está sendo exibido no momento por meio do compartilhamento de tela. Se a sua reunião tiver uma sala de espera, admita prontamente o bot do Scribe na reunião. Caso contrário, o Scribe for Meetings não funcionará.
 
 ### Sou um participante de reunião com deficiência de impressão e não sei se a reunião da qual estou participando foi registrada pelo Scribe for Meetings. O que posso fazer?
 
 Acesse [ScribeForMeetings.com] (https://scribeformeetings.com), cole o link de convite do Zoom ou do Microsoft Teams para sua reunião e pressione "Go" (Ir). Se a reunião tiver sido registrada no Scribe for Meetings, você estará pronto para acompanhar os slides acessíveis. Caso contrário, você pode se inscrever para ser notificado por e-mail quando a reunião tiver sido registrada no Scribe for Meetings.
 
-### Eu participo frequentemente de reuniões do Zoom ou do Microsoft Teams. Qual é a maneira mais fácil de descobrir se uma reunião está registrada no Scribe for Meetings e, se estiver, visualizar o conteúdo acessível?
+### Eu participo com frequência de reuniões do Zoom ou do Microsoft Teams. Qual é a maneira mais fácil de descobrir se uma reunião está registrada no Scribe for Meetings e, se estiver, visualizar o conteúdo acessível?
 
 O Scribe for Meetings tem uma [extensão para Chrome e Edge] (https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) que verifica a disponibilidade no Scribe for Meetings de qualquer reunião do Zoom ou do Microsoft Teams de que você participe. Com uma única tecla de atalho, você pode visualizar o conteúdo acessível se a reunião estiver registrada ou solicitar uma notificação de acompanhamento se a reunião for registrada no Scribe for Meetings posteriormente.
 
@@ -72,32 +72,31 @@ Em uma reunião em que esse recurso estiver ativado, assim que o apresentador mo
 1. Escolha o formato acessível que você deseja.
 1. Para alguns formatos, você pode opcionalmente personalizar as configurações, como voz de conversão de texto em fala, velocidade de fala, tabela de tradução em braile ou impressão em tamanho grande.
 1. Clique no botão "Preparar download".
-1. Observe seu e-mail para ver o link de download. Para a maioria dos formatos, o e-mail chegará em alguns minutos. A conversão para áudio pode levar muito mais tempo, dependendo da extensão da apresentação de slides, porque a síntese de fala é um processo mais demorado do que outras conversões.
+1. Observe seu e-mail para ver o link de download. Para a maioria dos formatos, o e-mail chegará em alguns minutos. A conversão para áudio pode levar muito mais tempo, dependendo da extensão da apresentação de slides, pois a síntese de fala é um processo mais demorado do que outras conversões.
 
-### Realizo muitas reuniões e quero permitir que meus participantes baixem os slides de todas essas reuniões. Posso ativar esse recurso por padrão?
+### Eu organizo muitas reuniões e quero permitir que meus participantes baixem os slides de todas essas reuniões. Posso ativar esse recurso por padrão?
 
 Sim. Siga estas etapas:
-1. 
-Acesse ScribeForMeetings.com.
+1. Acesse ScribeForMeetings.com.
 1. Se houver um link "Log In" na parte superior da página, clique nele, digite seu endereço de e-mail e siga as instruções para fazer login no Scribe for Meetings.
 1. Clique em "Settings" (Configurações) e depois em "Meeting Defaults" (Padrões de reunião).
 1. Marque a caixa de seleção "Allow attendees to download accessible versions of slides" (Permitir que os participantes baixem versões acessíveis dos slides) e clique em "Save" (Salvar).
 
 ### Quero proteger meus slides contra cópia e distribuição não autorizadas. O Scribe for Meetings oferece suporte a isso?
 
-Infelizmente, o Scribe for Meetings não pode impedir que os participantes copiem o texto de seus slides. Entretanto, se você não permitir que os slides sejam baixados, não será fácil para os participantes copiarem seus slides, pois eles terão que copiar um slide de cada vez. Além disso, observe que, na prática, isso não é diferente do que qualquer participante já pode fazer ao tirar capturas de tela dos seus slides.
+Infelizmente, o Scribe for Meetings não pode impedir que os participantes copiem o texto de seus slides. No entanto, se você não permitir que os slides sejam baixados, não será fácil para os participantes copiarem seus slides, pois eles terão que copiar um slide de cada vez. Além disso, observe que, na prática, isso não é diferente do que qualquer participante já pode fazer ao tirar capturas de tela dos seus slides.
 
 ### O Scribe for Meetings é multilíngue?
 
 Sim. O Scribe for Meetings pode renderizar o conteúdo em qualquer um dos 140 idiomas, novamente sem nenhum esforço extra do apresentador.
 
-### Preciso diminuir a velocidade da minha apresentação para garantir que os participantes com deficiência de impressão possam acompanhá-la?
+### Preciso diminuir a velocidade da minha apresentação para garantir que os participantes com deficiência de impressão possam acompanhar?
 
-Não. O Scribe for Meetings tem um recurso chamado Dynamic Visual Representation (Representação Visual Dinâmica), ou modo DVR, que permite que os participantes com deficiência visual leiam seus slides acessíveis em seu próprio ritmo. Um participante pode pausar a apresentação ao vivo, voltar a um slide que já leu, avançar em seu próprio ritmo e continuar a apresentação ao vivo quando estiver pronto.
+Não. O Scribe for Meetings tem um recurso chamado Dynamic Visual Representation (Representação Visual Dinâmica), ou modo DVR, que permite que os participantes com deficiência visual leiam os slides acessíveis em seu próprio ritmo. Um participante pode pausar a apresentação ao vivo, voltar a um slide que já leu, avançar em seu próprio ritmo e continuar a apresentação ao vivo quando estiver pronto.
 Para usar o modo DVR, o participante deve pressionar o botão Suspender apresentação ou o botão Slide anterior. Esses botões são identificados como tal para usuários de leitores de tela e para usuários de mouse que passam o mouse sobre eles. Visualmente, eles estão na parte inferior da página e se parecem com os botões Pausar e Faixa anterior em um reprodutor de mídia. Quando o usuário pressiona um desses botões, a apresentação ao vivo é pausada e, no caso do botão Slide anterior, ela retorna ao slide anterior. O usuário pode então usar os botões Slide anterior e Próximo slide para percorrer os slides no seu próprio ritmo e o botão Ir ao vivo para retornar à apresentação ao vivo. Esses botões se parecem com os botões Previous Track (Faixa anterior), Next Track (Próxima faixa) e Play (Reproduzir) em um reprodutor de mídia.  
 Observe que o modo DVR só permite que os participantes revisem os slides que foram exibidos desde que entraram na apresentação. Se um participante com deficiência de impressão chegar atrasado à sua apresentação, ele perderá os mesmos slides que qualquer outro participante atrasado teria perdido.
 
-### Tenho um participante com deficiência de impressão que se beneficiaria de ter meu conteúdo falado em voz alta, mas não se sente confortável com um leitor de tela cheia. O Scribe for Meetings pode ajudar?
+### Tenho um participante com deficiência de impressão que se beneficiaria de ter o meu conteúdo falado em voz alta, mas não se sente confortável com um leitor de tela cheia. O Scribe for Meetings pode ajudar?
 
 Sim. Nosso recurso Ler em voz alta falará seus slides usando as vozes fornecidas pelo dispositivo e pelo navegador da Web do usuário, enquanto desenha uma caixa ao redor de cada palavra à medida que ela é falada para ajudar o usuário a acompanhar visualmente. Para usuários do Windows, recomendamos o navegador Microsoft Edge para esse recurso, pois o Edge oferece vozes excelentes em vários idiomas, gratuitamente. No entanto, esse recurso também funciona em todas as outras plataformas e navegadores principais, inclusive em dispositivos móveis.  
 Para começar a ler o slide atual em voz alta, pressione o botão Ler em voz alta, que fica na parte inferior da tela e se parece com um alto-falante. Enquanto o Scribe for Meetings estiver lendo o slide em voz alta, ele mostrará controles para interromper a leitura (o botão com um ícone de quadrado), pausar ou retomar, voltar ou avançar (os botões que se parecem com os botões de Faixa anterior e Faixa seguinte em um reprodutor de mídia), acelerar e desacelerar a leitura ou alterar a voz. Esses controles desaparecerão assim que a leitura for concluída ou assim que o usuário a interromper.  
@@ -111,7 +110,7 @@ Sim. O Scribe for Meetings exibe seus slides de forma a torná-los acessíveis a
 
 Todos os aspectos de como o Scribe for Meetings exibe seus slides são otimizados para acessibilidade, para participantes com todos os tipos de deficiências de impressão. Como o Scribe for Meetings deve ser usado junto com a plataforma de reuniões existente, os participantes sempre podem voltar à janela principal da reunião para ver os slides como são exibidos em sua apresentação sem acessibilidade.
 
-### Eu não uso o PowerPoint. Ainda posso tornar minha apresentação acessível com o Scribe for Meetings?
+### Não uso o PowerPoint. Ainda posso tornar minha apresentação acessível com o Scribe for Meetings?
 
 O Scribe for Meetings pode tornar acessíveis os seus slides compartilhados na tela, independentemente do aplicativo que você usar para apresentá-los, desde que você possa fornecer o conjunto de slides no formato PowerPoint. Outros aplicativos de apresentação, como o Keynote e o Google Slides, podem converter suas apresentações de slides para o formato PowerPoint, portanto, você pode usá-los com o Scribe for Meetings.
 
@@ -135,8 +134,12 @@ Ainda não, mas em breve funcionará.
 
 ### Como as pessoas da nossa organização fazem login no Scribe for Meetings?
 
-Atualmente, o Scribe for Meetings oferece suporte a duas opções de autenticação. A opção mais simples é o nosso processo de login baseado em e-mail. Basta digitar seu endereço de e-mail e enviaremos um link que você poderá usar para fazer login; não é necessário usar senha. Para organizações com requisitos de segurança mais rigorosos, também podemos nos integrar a sistemas de logon único (SSO) que implementam o padrão SAML, seja por meio da federação [InCommon](https://www.incommon.org/) ou usando troca bilateral de metadados. Nosso provedor de serviços SAML usa o pacote de código aberto Shibboleth SP e foi implementado em parceria com a [Signet, Inc.,](https://www.signet.id/) uma empresa de gerenciamento de identidade e controle de acesso fundada por um arquiteto do Shibboleth. Observe que oferecemos suporte ao SSO por meio de vários provedores de identidade; além do Shibboleth IdP, testamos com o Azure Active Directory. Quando sua organização se inscrever no Scribe for Meetings, ofereceremos a integração de SSO, coberta pela taxa de instalação.
+Atualmente, o Scribe for Meetings oferece suporte a duas opções de autenticação. A opção mais simples é o nosso processo de login baseado em e-mail. Basta digitar seu endereço de e-mail e enviaremos um link que você poderá usar para fazer login; não é necessária nenhuma senha. Para organizações com requisitos de segurança mais rigorosos, também podemos nos integrar a sistemas de logon único (SSO) que implementam o padrão SAML, seja por meio da federação [InCommon](https://www.incommon.org/) ou usando a troca bilateral de metadados. Nosso provedor de serviços SAML usa o pacote de código aberto Shibboleth SP e foi implementado em parceria com a [Signet, Inc.,](https://www.signet.id/) uma empresa de gerenciamento de identidade e controle de acesso fundada por um arquiteto do Shibboleth. Observe que oferecemos suporte ao SSO por meio de vários provedores de identidade; além do Shibboleth IdP, testamos com o Azure Active Directory. Quando sua organização se inscrever no Scribe for Meetings, ofereceremos a integração de SSO, coberta pela taxa de instalação.
+
+### Qual é a extensão dos dados coletados pelo bot do Scribe for Meetings, os usos desses dados coletados e quem teria acesso aos dados coletados?
+
+O bot do Scribe processa o conteúdo da tela compartilhado pelo(s) apresentador(es). Esses dados permanecem em nossa rede segura e não são armazenados nem processados por terceiros.
 
 ### Qual é o futuro do Scribe for Meetings?
 
-O Scribe, a plataforma por trás da nossa linha de produtos Scribe, está aprendendo ativamente toda vez que um documento é processado. A tecnologia de Remediação de Documentos Aumentada com aprendizado de máquina fica mais inteligente a cada página, o que nos aproxima muito mais de 100% de precisão. Os benefícios se estendem a todos os nossos produtos, tornando o Scribe for Meetings um aplicativo que só vai melhorar quanto mais você o usar.
+O Scribe, a plataforma por trás da nossa linha de produtos Scribe, está aprendendo ativamente toda vez que um documento é processado. A tecnologia de Remediação de Documentos Aumentada, baseada em aprendizado de máquina, fica mais inteligente a cada página, o que nos aproxima muito mais de 100% de precisão. Os benefícios se estendem a todos os nossos produtos, tornando o Scribe for Meetings um aplicativo que só vai melhorar quanto mais você o usar.
