--- a/src/content/docs/es/faq.mdx
+++ b/src/content/docs/es/faq.mdx
@@ -6,13 +6,13 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 A continuación encontrará respuestas a algunas preguntas frecuentes sobre Scribe for Meetings. Cuando se enfrente a un problema, consulte este documento siempre que sea posible.  
-¿No encuentra su pregunta? [Póngase en contacto con nosotros](https://pneumasolutions.com/contact/) y le ayudaremos a aclararla.
+¿No encuentra su pregunta? [Póngase en contacto con nosotros (https://pneumasolutions.com/contact/) y le ayudaremos a resolverla.
 
 ### ¿Qué es Scribe for Meetings?
 
 Scribe for Meetings es una tecnología basada en la nube que toma una presentación compartida en plataformas como Zoom, Microsoft Teams, Google Meet y otras y la convierte en una presentación accesible en tiempo real para personas con problemas de impresión.
 
-### ¿Quién se beneficia de Scribe for Meetings?
+### ¿A quién beneficia Scribe for Meetings?
 
 En primer lugar, y lo que es más importante, a los millones de personas con deficiencias de impresión que, de otro modo, no se beneficiarían de la información que se presenta; y, a las masas de empresas grandes y pequeñas, organismos gubernamentales, todos los niveles educativos y organizaciones que saben poco acerca de la accesibilidad, pero que desearían disponer de un medio asequible para hacer que su contenido sea más inclusivo.
 
@@ -39,9 +39,9 @@ Los clientes empresariales pueden alojar Scribe for Meetings en sus propios serv
 
 ### Veo que un asistente llamado "Scribe for Meetings" intenta unirse a mi reunión. ¿Qué ocurre?
 
-Es el bot Scribe. Este bot observa la pantalla de la reunión para ver qué diapositiva se está mostrando y proporcionar la versión accesible de esa diapositiva en tiempo real a los asistentes con problemas de impresión. El bot Scribe no interrumpirá la reunión en modo alguno y no recopilará más información que el contenido que se está mostrando en ese momento a través de la pantalla compartida. Si su reunión tiene una sala de espera, admita sin demora al bot Scribe en la reunión. De lo contrario, Scribe for Meetings no funcionará.
+Es el bot Scribe. Este bot observa la pantalla de la reunión para ver qué diapositiva se está mostrando en ese momento y proporcionar la versión accesible de esa diapositiva en tiempo real a los asistentes con problemas de impresión. El bot Scribe no interrumpirá la reunión en modo alguno y no recopilará más información que el contenido que se está mostrando en ese momento a través de la pantalla compartida. Si su reunión tiene una sala de espera, admita sin demora al bot Scribe en la reunión. De lo contrario, Scribe for Meetings no funcionará.
 
-### Asisto a una reunión con problemas de impresión y no sé si la reunión a la que asisto se ha registrado a través de Scribe for Meetings. ¿Qué puedo hacer?
+### Soy un asistente a una reunión con problemas de impresión y no sé si la reunión a la que asisto se ha registrado a través de Scribe for Meetings. ¿Qué puedo hacer?
 
 Vaya a [ScribeForMeetings.com](https://scribeformeetings.com), pegue el enlace de invitación de Zoom o Microsoft Teams para su reunión y pulse "Ir". Si la reunión se ha registrado en Scribe for Meetings, podrás seguirla con diapositivas accesibles. Si no, puedes inscribirte para recibir una notificación por correo electrónico cuando la reunión se haya registrado en Scribe for Meetings.
 
@@ -49,7 +49,7 @@ Vaya a [ScribeForMeetings.com](https://scribeformeetings.com), pegue el enlace d
 
 Scribe for Meetings tiene una [extensión para Chrome y Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) que comprueba la disponibilidad en Scribe for Meetings de cualquier reunión de Zoom o Microsoft Teams a la que asista. Con una sola tecla de acceso rápido, puede ver el contenido accesible si la reunión está registrada, o solicitar una notificación de seguimiento si la reunión se registra en Scribe for Meetings más tarde.
 
-### Asisto a una reunión con problemas de impresión. ¿Disponen de algún recurso que me ayude a pedir al organizador de la reunión que utilice Scribe for Meetings?
+### Soy un asistente a una reunión con problemas de impresión. ¿Disponen de algún recurso que me ayude a pedir al organizador de la reunión que utilice Scribe for Meetings?
 
 Sí; consulte nuestro [Kit de autoayuda de Scribe para reuniones](https://sak.scribeformeetings.com). Aquí encontrarás una variedad de cartas ya escritas que puedes personalizar, copiar y pegar en un correo electrónico.
 
@@ -74,11 +74,10 @@ En una reunión en la que esté activada esta función, en cuanto el presentador
 1. Haz clic en el botón "Preparar descarga".
 1. Esté atento a su correo electrónico para recibir el enlace de descarga. Para la mayoría de los formatos, el correo electrónico llegará en unos minutos. La conversión a audio puede llevar mucho más tiempo, dependiendo de la longitud de la presentación de diapositivas, porque la síntesis de voz es un proceso que lleva más tiempo que otras conversiones.
 
-### Organizo muchas reuniones y quiero que los asistentes puedan descargar las diapositivas de todas ellas. ¿Puedo activar esta función por defecto?
+### Organizo muchas reuniones y quiero que mis asistentes puedan descargar las diapositivas de todas ellas. ¿Puedo activar esta función por defecto?
 
-Sí. Sigue estos pasos:
-1. 
-Vaya a ScribeForMeetings.com.
+Sí. Siga estos pasos:
+1. Vaya a ScribeForMeetings.com.
 1. Si hay un enlace "Iniciar sesión" en la parte superior de la página, haga clic en él, introduzca su dirección de correo electrónico y siga las instrucciones para iniciar sesión en Scribe for Meetings.
 1. Haga clic en "Configuración" y, a continuación, en "Valores predeterminados de la reunión".
 1. Marque la casilla "Permitir a los asistentes descargar versiones accesibles de las diapositivas" y, a continuación, haga clic en "Guardar".
@@ -89,7 +88,7 @@ Lamentablemente, Scribe for Meetings no puede impedir que los asistentes copien 
 
 ### ¿Es Scribe for Meetings multilingüe?
 
-Sí, Scribe for Meetings puede mostrar el contenido en 140 idiomas, sin que el presentador tenga que hacer ningún esfuerzo adicional.
+Sí, Scribe for Meetings puede reproducir contenidos en 140 idiomas, sin que el presentador tenga que hacer ningún esfuerzo adicional.
 
 ### ¿Tengo que ralentizar mi presentación para asegurarme de que los asistentes con problemas de impresión puedan seguir el ritmo?
 
@@ -100,24 +99,24 @@ Tenga en cuenta que el modo DVR sólo permite a los asistentes revisar las diapo
 ### Tengo un asistente con problemas de impresión al que le vendría bien que mi contenido se hablara en voz alta, pero no se siente cómodo con un lector de pantalla completa. ¿Puede ayudarme Scribe for Meetings?
 
 Sí. Nuestra función de lectura en voz alta pronunciará sus diapositivas utilizando las voces proporcionadas por el dispositivo y el navegador web del usuario, mientras dibuja un recuadro alrededor de cada palabra a medida que se pronuncia para ayudar al usuario a seguirla visualmente. Para los usuarios de Windows, recomendamos encarecidamente el navegador Microsoft Edge para esta función, ya que Edge ofrece excelentes voces en varios idiomas, de forma gratuita. Sin embargo, esta función también funciona con todas las demás plataformas y navegadores principales, incluidos los dispositivos móviles.  
-Para empezar a leer la diapositiva actual en voz alta, pulse el botón Leer en voz alta, que se encuentra en la parte inferior de la pantalla y parece un altavoz. Mientras Scribe for Meetings está leyendo la diapositiva en voz alta, mostrará controles para detener la lectura (el botón con un icono cuadrado), pausar o reanudar, retroceder o avanzar (los botones que parecen los botones Pista anterior y Pista siguiente de un reproductor multimedia), acelerar y ralentizar la lectura o cambiar la voz. Estos controles desaparecerán en cuanto termine la lectura o el usuario la detenga.  
+Para empezar a leer la diapositiva actual en voz alta, pulse el botón Leer en voz alta, que se encuentra en la parte inferior de la pantalla y parece un altavoz. Mientras Scribe for Meetings está leyendo la diapositiva en voz alta, mostrará controles para detener la lectura (el botón con un icono cuadrado), pausar o reanudar, retroceder o avanzar (los botones que parecen los botones Pista anterior y Pista siguiente de un reproductor multimedia), acelerar y ralentizar la lectura o cambiar la voz. Estos controles desaparecerán en cuanto termine la lectura o en cuanto el usuario la detenga.  
 Tenga en cuenta que la lectura en voz alta y el modo DVR (véase más arriba) pueden utilizarse conjuntamente, para que los asistentes con problemas de impresión puedan leer las diapositivas a su manera y a su ritmo.
 
 ### Tengo un asistente con problemas de impresión que necesita mis diapositivas en una fuente grande pero no necesita un programa de ampliación a pantalla completa. ¿Puede ayudarme Scribe for Meetings?
 
-Sí. Scribe for Meetings muestra sus diapositivas de forma que sean accesibles para los asistentes con todo tipo de requisitos de contenido. Si se necesitan fuentes grandes, un asistente puede utilizar la función de zoom de página de su navegador para ajustar el tamaño de la fuente de las diapositivas, sin necesidad de que el usuario se desplace continuamente hacia delante y hacia atrás. Scribe for Meetings también mostrará automáticamente el texto en el esquema de colores preferido por el usuario, ya sea el habitual oscuro sobre claro, claro sobre oscuro (también conocido como modo oscuro) o un esquema personalizado.  
+Sí. Scribe for Meetings muestra sus diapositivas de forma que sean accesibles para los asistentes con todo tipo de necesidades de contenido. Si se necesitan fuentes grandes, un asistente puede utilizar la función de zoom de página de su navegador para ajustar el tamaño de la fuente de las diapositivas, sin necesidad de que el usuario se desplace continuamente hacia delante y hacia atrás. Scribe for Meetings también mostrará automáticamente el texto en el esquema de colores preferido por el usuario, ya sea el habitual oscuro sobre claro, claro sobre oscuro (también conocido como modo oscuro) o un esquema personalizado.  
 
-### ¡Espera! ¿Qué está pasando aquí? ¿Por qué mis diapositivas tienen un aspecto tan diferente en Scribe for Meetings que en mi presentación?
+### ¿Qué está pasando aquí? ¿Por qué mis diapositivas tienen un aspecto tan diferente en Scribe for Meetings que en mi presentación?
 
 Cada aspecto de cómo Scribe para Reuniones muestra sus diapositivas está optimizado para la accesibilidad, para los asistentes con todo tipo de problemas de impresión. Dado que Scribe para reuniones está pensado para utilizarse junto con su plataforma de reuniones existente, los asistentes siempre pueden volver a la ventana principal de la reunión para ver las diapositivas tal y como se muestran en su presentación sin accesibilidad.
 
 ### No utilizo PowerPoint. ¿Puedo hacer que mi presentación sea accesible con Scribe for Meetings?
 
-Scribe for Meetings puede hacer que sus diapositivas compartidas en pantalla sean accesibles independientemente de la aplicación que utilice para presentarlas, siempre y cuando pueda proporcionar su paquete de diapositivas en formato PowerPoint. Otras aplicaciones de presentación como Keynote y Google Slides pueden convertir sus presentaciones de diapositivas a formato PowerPoint, por lo que puede utilizarlas con Scribe for Meetings.
+Scribe for Meetings puede hacer que sus diapositivas compartidas en pantalla sean accesibles independientemente de la aplicación que utilice para presentarlas, siempre que pueda proporcionar su paquete de diapositivas en formato PowerPoint. Otras aplicaciones de presentación como Keynote y Google Slides pueden convertir sus presentaciones de diapositivas a formato PowerPoint, por lo que puede utilizarlas con Scribe for Meetings.
 
 ### Scribe for Meetings no muestra las versiones accesibles de mis diapositivas durante la presentación, o se salta algunas diapositivas. ¿Qué ocurre?
 
-Asegúrese de que está presentando sus diapositivas en una presentación a pantalla completa y de que ha configurado el uso compartido de pantalla de Zoom o Microsoft Teams para compartir esa presentación con su audiencia. Si utilizas PowerPoint para Windows para ejecutar tu presentación, una vez que hayas abierto PowerPoint, asegúrate de pulsar F5 para entrar en el modo de presentación de diapositivas.
+Asegúrese de que está presentando sus diapositivas en una presentación a pantalla completa y de que ha configurado la pantalla compartida de Zoom o Microsoft Teams para compartir esa presentación con su audiencia. Si utilizas PowerPoint para Windows para ejecutar tu presentación, una vez que hayas abierto PowerPoint, asegúrate de pulsar F5 para entrar en el modo de presentación de diapositivas.
 [Más información sobre cómo utilizar el uso compartido de pantalla Zoom con PowerPoint](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
 [Más información sobre cómo utilizar la pantalla compartida de Microsoft Teams con PowerPoint](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
@@ -127,15 +126,19 @@ Si ya ha escrito descripciones (también conocidas como etiquetas alt o pies de 
 
 ### Mis diapositivas tienen cuadros, diagramas u otros gráficos complejos. ¿Puede Scribe for Meetings manejarlos?
 
-La respuesta es que no en la mayoría de los casos. Todavía estamos trabajando en ello. Dado que la plataforma Scribe Augmented Document Remediation se basa en el aprendizaje automático, a medida que recibamos más documentos y presentaciones de diapositivas con gráficos complejos, podremos entrenar nuestro modelo para hacer que esos gráficos sean accesibles. Pero, por ahora, tendrás que probarlo y comprobarlo.
+La respuesta es que, en general, no. Todavía estamos trabajando en ello. Dado que la plataforma Scribe Augmented Document Remediation se basa en el aprendizaje automático, a medida que recibamos más documentos y presentaciones de diapositivas con gráficos complejos, podremos entrenar nuestro modelo para hacer que esos gráficos sean accesibles. Pero, por ahora, tendrás que probarlo y comprobarlo.
 
 ### ¿Scribe for Meetings funciona con plataformas de reuniones distintas de Zoom y Microsoft Teams, como Jitsi Meet, Google Meet, Slack, Amazon Chime o BlueJeans?
 
-Todavía no, pero pronto lo hará.
+Todavía no, pero lo hará pronto.
 
 ### ¿Cómo inician sesión en Scribe for Meetings las personas de nuestra organización?
 
 Scribe for Meetings admite actualmente dos opciones de autenticación. La opción más sencilla es nuestro proceso de inicio de sesión basado en el correo electrónico. Sólo tiene que introducir su dirección de correo electrónico y le enviaremos un enlace que puede utilizar para iniciar sesión; no necesita contraseña. Para organizaciones con requisitos de seguridad más estrictos, también podemos integrarnos con sistemas de inicio de sesión único (SSO) que apliquen la norma SAML, ya sea a través de la federación [InCommon](https://www.incommon.org/) o mediante el intercambio bilateral de metadatos. Nuestro proveedor de servicios SAML utiliza el paquete de código abierto Shibboleth SP y se implementó en colaboración con [Signet, Inc.](https://www.signet.id/), una empresa de gestión de identidades y control de accesos fundada por un arquitecto de Shibboleth. Tenga en cuenta que soportamos SSO a través de una variedad de proveedores de identidad; además de Shibboleth IdP, hemos probado con Azure Active Directory. Cuando su organización se registre en Scribe for Meetings, le ofreceremos la incorporación de SSO, cubierta por la tarifa de configuración.
+
+### ¿Cuál es el alcance de los datos recopilados a través del bot de Scribe for Meetings, los usos de dichos datos recopilados y quién tendría acceso a los datos recopilados?
+
+El bot Scribe procesa el contenido de la pantalla compartido por el presentador o presentadores. Esos datos permanecen dentro de nuestra red segura y no son almacenados ni procesados por terceros.
 
 ### ¿Cuál es el futuro de Scribe for Meetings?
 
