--- a/src/content/docs/sv/faq.mdx
+++ b/src/content/docs/sv/faq.mdx
@@ -5,58 +5,58 @@ title: Ofta ställda frågor
 import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
-Här hittar du svar på några vanliga frågor om Scribe for Meetings. När du ställs inför ett problem, vänligen hänvisa till detta dokument när det är möjligt.  
-Ser du inte din fråga? [Kontakta oss](https://pneumasolutions.com/contact/), så hjälper vi dig att komma igång.
+Här finns svar på några vanliga frågor om Scribe for Meetings. När du ställs inför en fråga, vänligen hänvisa till detta dokument när det är möjligt.  
+Hittar du inte din fråga? [Kontakta oss](https://pneumasolutions.com/contact/), så hjälper vi dig.
 
-### Vad är Scribe för möten?
+### Vad är Scribe for Meetings?
 
-Scribe for Meetings är en molnbaserad teknik som tar en delad presentation på plattformar som Zoom, Microsoft Teams, Google Meet och andra och gör den till en tillgänglig presentation i realtid för personer med nedsatt skrivförmåga.
+Scribe for Meetings är en molnbaserad teknik som tar en delad presentation på plattformar som Zoom, Microsoft Teams, Google Meet och andra och gör om den till en tillgänglig presentation i realtid för personer med nedsatt läs- och skrivförmåga.
 
 ### Vem drar nytta av Scribe for Meetings?
 
-Först och främst de miljontals personer med nedsatt skrivförmåga som annars inte skulle kunna ta del av den information som presenteras, och massorna av stora och små företag, myndigheter, alla utbildningsnivåer och organisationer som vet lite om tillgänglighet men som vill ha ett prisvärt sätt att göra sitt innehåll mer inkluderande.
+Först och främst de miljontals personer med nedsatt läs- och skrivförmåga som annars inte skulle kunna dra nytta av den information som presenteras, och de många små och stora företag, myndigheter, utbildningsinstitutioner och organisationer som inte vet så mycket om tillgänglighet men som vill ha ett prisvärt sätt att göra sitt innehåll mer inkluderande.
 
 ### Varför ska jag välja Scribe for Meetings framför andra produkter?
 
-Vi är övertygade om att det inte finns något annat som gör det vi gör på samma sätt som vi gör det. Scribe for Meetings är den första tekniken i sitt slag som synkroniserar med mötesplattformar i realtid. Visst, konkurrenterna kommer att notera detta och sannolikt lansera sina imitationer, och vi ser fram emot konkurrensen, men om de inte planerar att konkurrera med priset känner vi oss övertygade om att du kommer att hitta vad du behöver här.
+Vi är övertygade om att det inte finns något annat på marknaden som gör det vi gör på samma sätt som vi gör det. Scribe for Meetings är den första tekniken i sitt slag som synkroniserar med mötesplattformar i realtid. Visst, konkurrenterna kommer att notera och sannolikt lansera sina imitationer, och vi ser fram emot konkurrensen, men om de inte planerar att konkurrera med pris, känner vi oss övertygade om att du hittar vad du behöver här.
 
 ### Hur fungerar Scribe for Meetings?
 
 Om du är värd:
 1. Besök [ScribeForMeetings.com,](https://scribeformeetings.com) klistra in inbjudningslänken för ditt möte och tryck på "Go".
 1. Klicka på knappen för att registrera ditt möte.
-1. Ange din e-postadress för att logga in om du blir ombedd att göra det. Om du använder Scribe for Meetings på uppdrag av en organisation, se till att du använder den e-postadress som organisationen har angett. Om din organisation har integrerat Scribe for Meetings med ett SSO-system (Single Sign-On) kommer du till den normala inloggningsprocessen för din organisation, eller möjligen loggas in automatiskt. I annat fall skickar vi dig ett e-postmeddelande med en länk som du kan använda för att logga in på Scribe for Meetings.
-1. Ange ett namn för ditt möte, välj din PowerPoint-presentation och tryck på "Skicka".
-    OBS: Scribe for Meetings stöder för närvarande Zoom-möten, Zoom-webbseminarier och Microsoft Teams. Registrera dig på vår e-postlista för att få ett meddelande när vi lägger till funktioner och ytterligare mötesplattformar.
+1. Om du uppmanas att logga in anger du din e-postadress. Om du använder Scribe for Meetings för en organisations räkning, se till att använda den e-postadress som du har fått av organisationen. Om din organisation har integrerat Scribe for Meetings med ett SSO-system (Single Sign-On) kommer du att tas till den normala inloggningsprocessen för din organisation, eller eventuellt loggas in automatiskt. Annars skickar vi dig ett e-postmeddelande med en länk som du kan använda för att logga in i Scribe for Meetings.
+1. Ange ett namn för ditt möte, välj ditt PowerPoint-bildspel och tryck på "Skicka".
+    OBS: Scribe for Meetings stöder för närvarande Zoom-möten, Zoom-webbinarier och Microsoft Teams. Registrera dig på vår e-postlista för att få ett meddelande när vi lägger till funktioner och ytterligare mötesplattformar.
 
-Ditt innehåll kommer att vara redo att lanseras inom några minuter. Det krävs ingen kunskap om att skapa tillgängliga presentationer. Som värd behöver du inte köra någon extra programvara på din enhet, och innehållet kan laddas upp så kort tid som 5 minuter före mötet.
-För mötesdeltagare med nedsatt skrivförmåga går du till https://www.ScribeForMeetings.com, klistrar in länken till din Zoom- eller Microsoft Teams-inbjudan och trycker på "Go". Alternativt kan din mötesvärd ha gett dig en direktlänk till Scribe for Meetings, antingen i e-postinbjudan eller i själva mötet via chatten. Oavsett hur du kommer dit är du nu redo att följa med i presentationen i vilken webbläsare som helst på vilken plattform som helst.
+Ditt innehåll kommer att vara redo att lanseras inom några minuter. Det krävs ingen kunskap om hur man skapar tillgängliga presentationer. Som värd behöver du inte köra någon extra programvara på din enhet, och innehållet kan laddas upp så lite som 5 minuter före mötet.
+Mötesdeltagare med nedsatt skrivförmåga kan navigera till https://www.ScribeForMeetings.com, klistra in länken till inbjudan till Zoom eller Microsoft Teams och trycka på "Go". Alternativt kan din mötesvärd ha gett dig en direktlänk till Scribe for Meetings, antingen i inbjudan eller under själva mötet via chatt. Oavsett hur du kommer dit är du nu redo att följa med i presentationen i vilken webbläsare som helst på vilken plattform som helst.
 
 ### Hur svårt är det att installera Scribe for Meetings?
 
-Scribe for Meetings är inte en installerad applikation. Det är en molntjänst, så inget mer än en webbläsare behövs för att njuta av ett möte. För presentatörer, förutom att ladda upp sitt innehåll före mötet, var processen avsiktligt utformad för att vara enkel. Det finns inget att installera på din dator eller enhet annat än Zoom, Microsoft Teams eller liknande mötesplattformar.
+Scribe for Meetings är inte en installerad applikation. Det är en molntjänst, så inget mer än en webbläsare behövs för att njuta av ett möte. För presentatörer, förutom att ladda upp sitt innehåll före mötet, är processen avsiktligt utformad för att vara enkel. Det finns inget annat att installera på din dator eller enhet än Zoom, Microsoft Teams eller liknande mötesplattformar.
 Företagskunder kan hosta Scribe for Meetings på sina egna servrar. Vänligen kontakta oss för mer information.
 
-### Jag ser en deltagare som heter "Scribe for Meetings" som försöker gå med i mitt möte. Vad är det som händer?
+### Jag ser en deltagare med namnet "Scribe for Meetings" som försöker gå med i mitt möte. Vad är det som händer?
 
-Det är Scribe-boten. Denna bot tittar på skärmen i ditt möte, så att den kan se vilken bild som för närvarande visas och tillhandahålla den tillgängliga versionen av den bilden i realtid till deltagare med nedsatt skrivförmåga. Scribe-boten stör inte mötet på något sätt och den samlar inte in någon annan information än vilket innehåll som för närvarande visas via skärmdelning. Om ditt möte har ett väntrum ska du omedelbart släppa in Scribe-boten i mötet. Annars kommer Scribe för möten inte att fungera.
+Det är Scribe-boten. Denna bot tittar på skärmen i ditt möte, så att den kan se vilken bild som visas för närvarande och tillhandahålla den tillgängliga versionen av den bilden i realtid till deltagare med nedsatt skrivförmåga. Scribe-boten kommer inte att störa mötet på något sätt och den kommer inte att samla in någon annan information än vilket innehåll som för närvarande visas via skärmdelning. Om ditt möte har ett väntrum ska du omedelbart släppa in Scribe-boten i mötet. Annars kommer Scribe for Meetings inte att fungera.
 
-### Jag är en mötesdeltagare med nedsatt skrivförmåga och jag vet inte om mötet jag deltar i har registrerats via Scribe for Meetings. Vad kan jag göra?
+### Jag är en skrivhandikappad mötesdeltagare och jag vet inte om mötet jag deltar i har registrerats via Scribe for Meetings. Vad kan jag göra åt det?
 
-Gå till [ScribeForMeetings.com](https://scribeformeetings.com), klistra in Zoom- eller Microsoft Teams-inbjudningslänken för ditt möte och tryck på "Go". Om mötet har registrerats med Scribe for Meetings är du redo att följa med i tillgängliga bilder. Om inte, kan du registrera dig för att få ett e-postmeddelande när mötet har registrerats med Scribe for Meetings.
+Gå till [ScribeForMeetings.com] (https://scribeformeetings.com), klistra in länken till Zoom- eller Microsoft Teams-inbjudan för ditt möte och tryck på "Go". Om mötet har registrerats med Scribe for Meetings är du redo att följa med i tillgängliga bilder. Om inte, kan du registrera dig för att få ett e-postmeddelande när mötet har registrerats med Scribe for Meetings.
 
-### Jag deltar ofta i Zoom- eller Microsoft Teams-möten. Vad är det enklaste sättet för mig att ta reda på om ett möte är registrerat med Scribe for Meetings, och om det är så, visa det tillgängliga innehållet?
+### Jag deltar ofta i Zoom- eller Microsoft Teams-möten. Vad är det enklaste sättet för mig att ta reda på om ett möte är registrerat med Scribe for Meetings, och om det är det, visa det tillgängliga innehållet?
 
-Scribe for Meetings har ett [tillägg för Chrome och Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) som kontrollerar tillgängligheten i Scribe for Meetings för alla Zoom- eller Microsoft Teams-möten som du deltar i. Med en enda snabbtangent kan du visa det tillgängliga innehållet om mötet är registrerat, eller begära ett uppföljningsmeddelande om mötet registreras i Scribe for Meetings senare.
+Scribe for Meetings har ett [tillägg för Chrome och Edge] (https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) som kontrollerar tillgängligheten i Scribe for Meetings för alla Zoom- eller Microsoft Teams-möten du deltar i. Med en enda snabbtangent kan du visa det tillgängliga innehållet om mötet är registrerat, eller begära ett uppföljningsmeddelande om mötet registreras med Scribe for Meetings senare.
 
-### Jag är en mötesdeltagare med nedsatt skrivförmåga. Har du några resurser som kan hjälpa mig att be mötesvärden att använda Scribe for Meetings?
+### Jag är en skrivhandikappad mötesdeltagare. Har ni några resurser som kan hjälpa mig att be mötesvärden att använda Scribe for Meetings?
 
-Ja, kolla in vårt [Scribe for Meetings Self-Advocacy Kit] (https://sak.scribeformeetings.com). Här hittar du en mängd förskrivna brev som du kan anpassa och sedan kopiera och klistra in i ett e-postmeddelande.
+Ja, kolla in vårt [Scribe for Meetings Self-Advocacy Kit] (https://sak.scribeformeetings.com). Här hittar du en mängd olika färdigskrivna brev som du kan anpassa och sedan kopiera och klistra in i ett e-postmeddelande.
 
-### Kan Scribe for Meetings konvertera en presentation till tillgängliga filformat för offlinevisning?
+### Kan Scribe for Meetings konvertera en presentation till tillgängliga filformat för visning offline?
 
-Ja, det går. När mötet skapas kan presentatören välja att tillhandahålla sin presentation för nedladdning i följande filformat:
-* En tillgänglig webbsida, med alla samma funktioner som livepresentationen, inklusive uppläst text
+Ja, det kan jag. När du skapar mötet kan presentatören välja att tillhandahålla sin presentation för nedladdning i följande filformat:
+* En tillgänglig webbsida med samma funktioner som livepresentationen, inklusive uppläst text
 * Taggad PDF
 * MP3, via text-till-tal på ett dussintal språk
 * DAISY, text plus ljud
@@ -64,79 +64,82 @@ Ja, det går. När mötet skapas kan presentatören välja att tillhandahålla s
 * Microsoft Word
 * Punktskrift: Grade 1, Grade 2, Unified English Braille och många andra språk
 
-PDF- och Microsoft Word-alternativen stöder stora tryck. Detta alternativ, och andra alternativ såsom talhastighet för ljudutmatning, kan väljas av deltagarna när de laddar ner bilderna.
-Den här funktionen är inte aktiverad som standard, utan presentatören måste välja att tillåta den. Om du vill aktivera den här funktionen när du registrerar ett möte markerar du kryssrutan "Tillåt deltagare att ladda ner tillgängliga versioner av bilder" Detta val kommer endast att gälla för det möte som för närvarande registreras.
-För ett möte där denna funktion är aktiverad, så snart presentatören har visat en bild, kommer webbsidan där deltagarna visar tillgängliga bilder att innehålla en länk som heter "Ladda ner bilder". För att ladda ner bilderna ska en deltagare följa dessa steg:
+PDF- och Microsoft Word-alternativen stöder stor stil. Detta alternativ, och andra alternativ som t.ex. talhastighet för ljudutmatning, kan väljas av deltagarna när de laddar ner bilderna.
+Den här funktionen är inte aktiverad som standard, utan presentatören måste välja att tillåta den. Om du vill aktivera den här funktionen när du registrerar ett möte markerar du kryssrutan "Tillåt deltagare att ladda ner tillgängliga versioner av bilder" Detta val gäller endast för det möte som för närvarande registreras.
+För ett möte där den här funktionen är aktiverad kommer webbsidan där deltagarna kan se tillgängliga bilder att innehålla en länk med namnet "Ladda ner bilder" så snart presentatören har visat en bild. För att ladda ner bilderna ska en deltagare följa dessa steg:
 1. Klicka på länken "Ladda ner bilder".
-1. Ange din e-postadress om du blir ombedd att göra det och följ instruktionerna för att logga in.
+1. Om du uppmanas att göra det, ange din e-postadress och följ instruktionerna för att logga in.
 1. Välj det tillgängliga format du vill ha.
-1. För vissa format kan du anpassa inställningar, t.ex. text-till-tal-röst, talhastighet, översättningstabell för punktskrift eller storstil.
+1. För vissa format kan du anpassa inställningarna, t.ex. text-till-tal-röst, talhastighet, översättningstabell för punktskrift eller storstil.
 1. Klicka på knappen "Förbered nedladdning".
-1. Håll utkik efter nedladdningslänken i din e-post. För de flesta format kommer e-postmeddelandet inom några minuter. Konvertering till ljud kan ta mycket längre tid, beroende på hur långt bildspelet är, eftersom talsyntes är en mer tidskrävande process än andra konverteringar.
+1. Håll utkik i din e-post efter nedladdningslänken. För de flesta format kommer e-postmeddelandet inom några minuter. Konvertering till ljud kan ta mycket längre tid, beroende på hur långt bildspelet är, eftersom talsyntes är en mer tidskrävande process än andra konverteringar.
 
-### Jag är värd för många möten och jag vill låta mina deltagare ladda ner bilderna för alla dessa möten. Kan jag aktivera den här funktionen som standard?
+### Jag håller många möten och jag vill att mina deltagare ska kunna ladda ner bilderna för alla dessa möten. Kan jag aktivera den här funktionen som standard?
 
-Ja, det kan du. Följ dessa steg:
-1. 
-Gå till ScribeForMeetings.com.
-1. Om det finns en "Logga in"-länk högst upp på sidan klickar du på den, anger din e-postadress och följer instruktionerna för att logga in på Scribe for Meetings.
+Ja, det kan jag. Följ dessa steg:
+1. Gå till ScribeForMeetings.com.
+1. Om det finns en "Logga in"-länk högst upp på sidan klickar du på den, anger din e-postadress och följer instruktionerna för att logga in i Scribe for Meetings.
 1. Klicka på "Inställningar" och sedan på "Standardinställningar för möten".
-1. Markera kryssrutan som heter "Tillåt deltagare att ladda ner tillgängliga versioner av bilder" och klicka sedan på "Spara".
+1. Markera kryssrutan "Tillåt deltagarna att ladda ner tillgängliga versioner av bilderna" och klicka sedan på "Spara".
 
-### Jag vill skydda mina bilder från obehörig kopiering och distribution. Har Scribe for Meetings stöd för detta?
+### Jag vill skydda mina bilder från obehörig kopiering och distribution. Finns det stöd för detta i Scribe for Meetings?
 
-Tyvärr kan Scribe for Meetings inte hindra dina deltagare från att kopiera texten i dina bilder. Men om du inte tillåter att bilderna laddas ner kommer det inte att vara lätt för deltagarna att kopiera dina bilder, eftersom de måste kopiera en bild i taget. Observera också att detta i praktiken inte skiljer sig från vad alla deltagare redan kan göra genom att ta skärmdumpar av dina bilder.
+Tyvärr kan Scribe for Meetings inte hindra dina deltagare från att kopiera texten i dina bilder. Men om du inte tillåter att bilderna laddas ner blir det inte lätt för deltagarna att kopiera dina bilder, eftersom de måste kopiera en bild i taget. Observera också att detta i praktiken inte skiljer sig från vad alla deltagare redan kan göra genom att ta skärmdumpar av dina slides.
 
 ### Är Scribe for Meetings flerspråkigt?
 
-Ja, Scribe for Meetings kan återge innehåll på 140 språk, återigen utan extra ansträngning från presentatören.
+Ja, Scribe for Meetings kan återge innehåll på 140 olika språk, återigen utan någon extra ansträngning från presentatören.
 
-### Måste jag sakta ner min presentation för att se till att deltagare med läs- och skrivsvårigheter kan hänga med?
+### Måste jag sakta ner min presentation för att se till att deltagare med nedsatt skrivförmåga kan hänga med?
 
-Nej. Scribe for Meetings har en funktion som kallas Dynamic Visual Representation, förkortat DVR-läge, som gör att deltagare med nedsatt syn kan läsa dina tillgängliga bilder i sin egen takt. En deltagare kan pausa livepresentationen, gå tillbaka till en bild som de redan har läst, gå framåt i sin egen takt och sedan fortsätta med livepresentationen när de är redo.
-För att använda DVR-läget ska deltagaren trycka på antingen knappen Avbryt presentation eller knappen Föregående bild. Dessa knappar är märkta som sådana för skärmläsaranvändare och för musanvändare som håller muspekaren över dem. Visuellt finns de längst ner på sidan och ser ut som knapparna Paus och Föregående spår i en mediaspelare. När användaren trycker på någon av dessa knappar pausas livepresentationen, och för knappen Föregående bild återgår den till föregående bild. Användaren kan sedan använda knapparna Föregående bild och Nästa bild för att gå igenom bilderna i sin egen takt, och knappen Gå live för att återgå till livepresentationen. Dessa knappar ser ut som knapparna Föregående spår, Nästa spår och Spela upp i en mediaspelare.  
-Observera att DVR-läget endast tillåter deltagare att granska bilder som har visats sedan de gick med i presentationen. Om en deltagare med nedsatt skrivförmåga är sen till din presentation missar de samma bilder som alla andra sena deltagare skulle ha missat.
+Nej. Scribe for Meetings har en funktion som kallas Dynamic Visual Representation, eller DVR-läge, som gör att deltagare med nedsatt läs- och skrivförmåga kan läsa dina tillgängliga bilder i sin egen takt. En deltagare kan pausa livepresentationen, gå tillbaka till en bild som han eller hon redan har läst, gå framåt i sin egen takt och sedan fortsätta med livepresentationen när han eller hon är redo.
+För att använda DVR-läget ska deltagaren trycka på antingen knappen Suspend Presentation eller knappen Previous Slide. Dessa knappar är märkta som sådana för användare av skärmläsare och för musanvändare som håller muspekaren över dem. Visuellt finns de längst ned på sidan och ser ut som knapparna Paus och Föregående spår i en mediaspelare. När användaren trycker på en av dessa knappar pausas livepresentationen, och för knappen Föregående bild återgår den till föregående bild. Användaren kan sedan använda knapparna Previous Slide och Next Slide för att gå igenom bilderna i sin egen takt, och knappen Go Live för att återgå till livepresentationen. Dessa knappar ser ut som knapparna Föregående spår, Nästa spår och Spela upp i en mediaspelare.  
+Observera att DVR-läget endast gör det möjligt för deltagarna att granska bilder som har visats sedan de anslöt till presentationen. Om en deltagare med nedsatt skrivförmåga kommer för sent till din presentation missar han eller hon samma bilder som alla andra sena deltagare skulle ha missat.
 
-### Jag har en deltagare med läs- och skrivsvårigheter som skulle ha nytta av att få mitt innehåll uppläst men som inte är bekväm med en skärmläsare. Kan Scribe for Meetings hjälpa till?
+### Jag har en deltagare med nedsatt läs- och skrivförmåga som skulle ha nytta av att få mitt innehåll uppläst, men som inte är bekväm med en skärmläsare. Kan Scribe for Meetings hjälpa till?
 
-Ja, det kan vi. Vår högläsningsfunktion läser upp dina bilder med de röster som tillhandahålls av din användares enhet och webbläsare, samtidigt som en ruta ritas runt varje ord när det läses upp för att hjälpa användaren att följa med visuellt. För Windows-användare rekommenderar vi Microsoft Edge för den här funktionen, eftersom Edge erbjuder enastående röster på flera språk, kostnadsfritt. Funktionen fungerar dock även med alla andra större plattformar och webbläsare, inklusive mobila enheter.  
-För att börja läsa den aktuella bilden högt trycker du på knappen Läs högt, som finns längst ner på skärmen och ser ut som en högtalare. Medan Scribe for Meetings läser upp bilden visas kontroller för att stoppa läsningen (knappen med en fyrkantig ikon), pausa eller återuppta, gå bakåt eller framåt (knapparna som ser ut som knapparna Föregående spår och Nästa spår i en mediaspelare), snabba upp och sakta ner läsningen eller ändra rösten. Dessa kontroller försvinner så snart läsningen är klar eller så snart användaren stoppar den.  
-Observera att Högläsning och DVR-läge (se ovan) kan användas tillsammans, så att deltagare med nedsatt läsförmåga kan läsa bilderna både på sitt eget sätt och i sin egen takt.
+Ja, det kan jag. Vår uppläsningsfunktion läser upp dina bilder med hjälp av de röster som tillhandahålls av användarens enhet och webbläsare, samtidigt som en ruta ritas runt varje ord när det läses upp för att hjälpa användaren att följa med visuellt. För Windows-användare rekommenderar vi starkt webbläsaren Microsoft Edge för den här funktionen, eftersom Edge erbjuder enastående röster på flera språk, kostnadsfritt. Den här funktionen fungerar dock även med alla andra större plattformar och webbläsare, inklusive mobila enheter.  
+För att börja läsa upp den aktuella bilden högt trycker du på Read Aloud-knappen, som finns längst ner på skärmen och ser ut som en högtalare. Medan Scribe for Meetings läser upp bilden visas kontroller för att stoppa uppläsningen (knappen med en fyrkantig ikon), pausa eller återuppta, gå bakåt eller framåt (knapparna som ser ut som knapparna Föregående spår och Nästa spår i en mediaspelare), snabba upp och sakta ner uppläsningen eller ändra rösten. Dessa kontroller försvinner så snart läsningen är klar eller så snart användaren stoppar den.  
+Observera att uppläsning och DVR-läge (se ovan) kan användas tillsammans så att deltagare med nedsatt läs- och skrivförmåga kan läsa bilderna både på sitt eget sätt och i sin egen takt.
 
-### Jag har en deltagare med nedsatt skrivförmåga som behöver mina bilder i ett stort typsnitt men inte behöver ett förstoringsprogram för hela skärmen. Kan Scribe for Meetings hjälpa till?
+### Jag har en deltagare med nedsatt läs- och skrivförmåga som behöver mina bilder i ett stort typsnitt men som inte behöver ett förstoringsprogram för hela skärmen. Kan Scribe for Meetings hjälpa till?
 
-Ja, Scribe for Meetings visar dina bilder på ett sätt som gör dem tillgängliga för deltagare med alla typer av innehållskrav. Om stora teckensnitt behövs kan en deltagare använda webbläsarens sidzoomfunktion för att justera teckenstorleken på bilderna, utan att användaren behöver scrolla fram och tillbaka hela tiden. Scribe for Meetings visar också automatiskt texten i det färgschema som användaren föredrar, oavsett om det är det vanliga mörk-på-ljus, ljus-på-mörk (även känt som mörkt läge) eller ett anpassat schema.  
+Ja, Scribe for Meetings visar dina bilder på ett sätt som gör dem tillgängliga för deltagare med alla typer av innehållskrav. Om det behövs stora teckensnitt kan en deltagare använda webbläsarens sidzoomfunktion för att justera teckensnittsstorleken på bilderna, utan att användaren behöver scrolla fram och tillbaka hela tiden. Scribe for Meetings visar också automatiskt texten i det färgschema som användaren föredrar, oavsett om det är det vanliga mörkt-på-ljust, ljust-på-mörkt (även känt som mörkt läge) eller ett anpassat schema.  
 
 ### Vänta! Vad är det som händer här? Varför ser mina bilder så annorlunda ut i Scribe for Meetings än de gör i min presentation?
 
-Varje aspekt av hur Scribe for Meetings visar dina bilder är optimerad för tillgänglighet, för deltagare med alla typer av trycksvårigheter. Eftersom Scribe for Meetings är tänkt att användas tillsammans med din befintliga mötesplattform kan deltagarna alltid gå tillbaka till huvudfönstret för att se bilderna som de visas i din presentation utan tillgänglighet.
+Varje aspekt av hur Scribe for Meetings visar dina bilder är optimerad för tillgänglighet, för deltagare med alla typer av utskriftssvårigheter. Eftersom Scribe for Meetings är avsett att användas tillsammans med din befintliga mötesplattform, kan deltagarna alltid gå tillbaka till huvudfönstret för att se bilderna som de visas i din presentation utan tillgänglighet.
 
 ### Jag använder inte PowerPoint. Kan jag ändå göra min presentation tillgänglig med Scribe for Meetings?
 
-Scribe for Meetings kan göra dina skärmdelade bilder tillgängliga oavsett vilken app du använder för att presentera dem, så länge du kan tillhandahålla ditt bildspel i PowerPoint-format. Andra presentationsappar som Keynote och Google Slides kan konvertera sina bildspel till PowerPoint-format, så du kan använda dessa med Scribe for Meetings.
+Scribe for Meetings kan göra dina skärmdelade bilder tillgängliga oavsett vilken app du använder för att presentera dem, så länge du kan tillhandahålla ditt bildspel i PowerPoint-format. Andra presentationsappar som Keynote och Google Slides kan konvertera sina bildspel till PowerPoint-format, så du kan använda dem med Scribe for Meetings.
 
-### Scribe for Meetings visar inte de tillgängliga versionerna av mina bilder under presentationen, eller så hoppar den över vissa bilder. Vad är det som är fel?
+### Scribe for Meetings visar inte de tillgängliga versionerna av mina bilder under presentationen, eller så hoppar den över vissa bilder. Vad är det för fel?
 
-Se till att du presenterar dina bilder i ett bildspel i helskärm och att du har konfigurerat Zoom eller Microsoft Teams skärmdelning för att dela bildspelet med din publik. Om du använder PowerPoint för Windows för att köra din presentation, se till att du trycker på F5 för att öppna bildspelsläget när du har öppnat PowerPoint.
-[Läs mer om hur du använder Zoom skärmdelning med PowerPoint](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+Se till att du presenterar dina bilder i ett bildspel i helskärm och att du har konfigurerat Zoom eller Microsoft Teams skärmdelning för att dela bildspelet med din publik. Om du använder PowerPoint för Windows för att köra din presentation, när du har öppnat PowerPoint, se till att du trycker på F5 för att gå till bildspelsläge.
+[Läs mer om hur du använder Zoom-skärmdelning med PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
 [Läs mer om hur du använder Microsoft Teams skärmdelning med PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-### Hur hanterar Scribe for Meetings bilder och grafik i mina bilder?
+### Hur hanterar Scribe for Meetings bilder och grafik i mina diabilder?
 
-Om du redan har skrivit beskrivningar (även kända som alt-taggar eller bildtexter) för det grafiska innehållet i dina bilder, kommer Scribe for Meetings att använda dessa. Annars kommer Scribe for Meetings att använda en molnbaserad bildbeskrivningstjänst som drivs av maskininlärning för att automatiskt lägga till alt-taggar för dina bilder. Om bilderna innehåller text kommer Scribe for Meetings även att använda optisk teckenigenkänning (OCR) för att göra texten tillgänglig.
+Om du redan har skrivit beskrivningar (även kallade alt-taggar eller bildtexter) för det grafiska innehållet i dina bilder, kommer Scribe for Meetings att använda dessa. Annars kommer Scribe for Meetings att använda en molnbaserad bildbeskrivningstjänst som drivs av maskininlärning för att automatiskt lägga till alt-taggar för dina grafiker. Om bilderna innehåller text kommer Scribe for Meetings även att använda OCR (Optical Character Recognition) för att göra texten tillgänglig.
 
-### Mina bilder innehåller diagram, tabeller eller annan komplex grafik. Kan Scribe for Meetings hantera dem?
+### Mina slides har tabeller, diagram eller annan komplex grafik. Kan Scribe for Meetings hantera dem?
 
-Det korta svaret är, för det mesta inte. Vi arbetar fortfarande på detta. Eftersom Scribe Augmented Document Remediation-plattformen drivs av maskininlärning kommer vi, när vi får in fler dokument och bildspel med komplex grafik, att kunna träna vår modell för att göra denna grafik tillgänglig. Men än så länge får du helt enkelt prova dig fram.
+Det korta svaret är, för det mesta inte. Vi arbetar fortfarande på detta. Eftersom Scribe Augmented Document Remediation-plattformen drivs av maskininlärning kommer vi, i takt med att vi får fler dokument och bildspel med komplex grafik, att kunna träna vår modell för att göra grafiken tillgänglig. Men för tillfället får du helt enkelt prova och se.
 
-### Fungerar Scribe for Meetings med andra mötesplattformar än Zoom och Microsoft Teams, som Jitsi Meet, Google Meet, Slack, Amazon Chime eller BlueJeans?
+### Fungerar Scribe for Meetings med andra mötesplattformar än Zoom och Microsoft Teams, till exempel Jitsi Meet, Google Meet, Slack, Amazon Chime eller BlueJeans?
 
 Inte ännu, men det kommer snart.
 
-### Hur loggar personer inom vår organisation in på Scribe for Meetings?
+### Hur loggar personer inom vår organisation in i Scribe for Meetings?
 
-Scribe for Meetings stöder för närvarande två alternativ för autentisering. Det enklaste alternativet är vår e-postbaserade inloggningsprocess. Ange bara din e-postadress så skickar vi en länk som du kan använda för att logga in; inget lösenord behövs. För organisationer med strängare säkerhetskrav kan vi även integrera med SSO-system (single sign-on) som implementerar SAML-standarden, antingen via [InCommon](https://www.incommon.org/) federationen eller med hjälp av bilateralt utbyte av metadata. Vår SAML-tjänsteleverantör använder Shibboleth SP-paketet med öppen källkod och implementerades i samarbete med [Signet, Inc.,](https://www.signet.id/), ett företag inom identitetshantering och åtkomstkontroll som grundades av en av Shibboleths arkitekter. Observera att vi stöder SSO via en mängd olika identitetsleverantörer; förutom Shibboleth IdP har vi testat med Azure Active Directory. När din organisation registrerar sig med Scribe for Meetings erbjuder vi SSO-onboarding, som täcks av installationsavgiften.
+Scribe for Meetings stöder för närvarande två alternativ för autentisering. Det enklaste alternativet är vår e-postbaserade inloggningsprocess. Ange bara din e-postadress så skickar vi en länk som du kan använda för att logga in; inget lösenord behövs. För organisationer med strängare säkerhetskrav kan vi också integrera med SSO-system (Single Sign-On) som implementerar SAML-standarden, antingen via [InCommon](https://www.incommon.org/)-federationen eller genom bilateralt utbyte av metadata. Vår SAML-tjänsteleverantör använder Shibboleth SP-paketet med öppen källkod och implementerades i samarbete med [Signet, Inc.](https://www.signet.id/), ett företag för identitetshantering och åtkomstkontroll som grundades av en av arkitekterna bakom Shibboleth. Observera att vi stöder SSO via en mängd olika identitetsleverantörer; förutom Shibboleth IdP har vi testat med Azure Active Directory. När din organisation registrerar sig för Scribe for Meetings erbjuder vi SSO-onboarding, vilket täcks av installationsavgiften.
+
+### Vad är omfattningen av data som samlas in via Scribe for Meetings-boten, eventuella användningsområden för den insamlade datan och vem skulle ha tillgång till den insamlade datan?
+
+Scribe-boten bearbetar skärminnehållet som delas av presentatören/erna. Dessa data stannar inom vårt säkra nätverk och varken lagras eller bearbetas av någon tredje part.
 
 ### Vad är framtiden för Scribe for Meetings?
 
-Scribe, plattformen bakom våra Scribe-produkter, lär sig aktivt varje gång ett dokument bearbetas. Den maskininlärningsdrivna Augmented Document Remediation-tekniken blir smartare för varje sida och tar oss så mycket närmare 100% noggrannhet. Fördelarna sprider sig till alla våra produkter, vilket gör Scribe for Meetings till en applikation som bara blir bättre ju mer du använder den.
+Scribe, plattformen bakom vår Scribe-produktlinje, lär sig aktivt varje gång ett dokument behandlas. Den maskininlärningsdrivna Augmented Document Remediation-tekniken blir smartare för varje sida, vilket tar oss närmare 100% noggrannhet. Fördelarna sprider sig till alla våra produkter, vilket gör Scribe for Meetings till en applikation som bara blir bättre ju mer du använder den.
